@@ -16,46 +16,78 @@
  */
 package org.apache.solr.core;
 
-import org.apache.lucene.search.IndexSearcher;
-import org.apache.solr.common.SolrException;
-import org.apache.solr.logging.LogWatcherConfig;
-import org.apache.solr.update.UpdateShardHandlerConfig;
-
+import java.io.IOException;
+import java.lang.invoke.MethodHandles;
+import java.net.URL;
+import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Properties;
 import java.util.Set;
-
+import java.util.concurrent.TimeUnit;
+import java.util.function.Predicate;
+import java.util.regex.Pattern;
+import java.util.stream.Collectors;
+import org.apache.lucene.search.IndexSearcher;
+import org.apache.solr.api.ClusterPluginsSource;
+import org.apache.solr.api.ContainerPluginsRegistry;
+import org.apache.solr.api.NodeConfigClusterPluginsSource;
+import org.apache.solr.client.solrj.impl.SolrZkClientTimeout;
+import org.apache.solr.common.SolrException;
+import org.apache.solr.common.SolrException.ErrorCode;
+import org.apache.solr.common.cloud.SolrZkClient;
+import org.apache.solr.common.util.StrUtils;
+import org.apache.solr.logging.LogWatcherConfig;
+import org.apache.solr.search.CacheConfig;
+import org.apache.solr.servlet.SolrDispatchFilter;
+import org.apache.solr.update.UpdateShardHandlerConfig;
+import org.apache.solr.util.ModuleUtils;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class NodeConfig {
+  private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
+
   // all Path fields here are absolute and normalized.
 
   private final String nodeName;
 
   private final Path coreRootDirectory;
+  private final String coresLocatorClass;
+  private final String coreSorterClass;
 
   private final Path solrDataHome;
 
   private final Integer booleanQueryMaxClauseCount;
-  
+
   private final Path configSetBaseDirectory;
 
   private final Set<Path> allowPaths;
 
   private final List<String> allowUrls;
 
+  private final boolean hideStackTraces;
+
   private final String sharedLibDirectory;
 
-  private final PluginInfo shardHandlerFactoryConfig;
+  private final String modules;
 
+  private final Set<String> hiddenSysProps;
+  private final Predicate<String> hiddenSysPropPattern;
+
+  private final PluginInfo shardHandlerFactoryConfig;
   private final UpdateShardHandlerConfig updateShardHandlerConfig;
 
   private final String configSetServiceClass;
 
   private final String coreAdminHandlerClass;
+
+  private final Map<String, String> coreAdminHandlerActions;
 
   private final String collectionsAdminHandlerClass;
 
@@ -73,9 +105,7 @@ public class NodeConfig {
 
   private final int replayUpdatesThreads;
 
-  @Deprecated
-  // This should be part of the transientCacheConfig, remove in 7.0
-  private final int transientCacheSize;
+  @Deprecated private final int transientCacheSize;
 
   private final boolean useSchemaCache;
 
@@ -85,31 +115,58 @@ public class NodeConfig {
 
   private final MetricsConfig metricsConfig;
 
-  private final PluginInfo transientCacheConfig;
+  private final Map<String, CacheConfig> cachesConfig;
 
   private final PluginInfo tracerConfig;
 
-  // Track if this config was loaded from zookeeper so that we can skip validating the zookeeper connection later
-  // If it becomes necessary to track multiple potential sources in the future, replace this with an Enum
-  private final boolean fromZookeeper;
+  private final PluginInfo[] clusterPlugins;
+
   private final String defaultZkHost;
 
-
-  private NodeConfig(String nodeName, Path coreRootDirectory, Path solrDataHome, Integer booleanQueryMaxClauseCount,
-                     Path configSetBaseDirectory, String sharedLibDirectory,
-                     PluginInfo shardHandlerFactoryConfig, UpdateShardHandlerConfig updateShardHandlerConfig,
-                     String coreAdminHandlerClass, String collectionsAdminHandlerClass,
-                     String healthCheckHandlerClass, String infoHandlerClass, String configSetsHandlerClass,
-                     LogWatcherConfig logWatcherConfig, CloudConfig cloudConfig, Integer coreLoadThreads, int replayUpdatesThreads,
-                     int transientCacheSize, boolean useSchemaCache, String managementPath,
-                     Path solrHome, SolrResourceLoader loader,
-                     Properties solrProperties, PluginInfo[] backupRepositoryPlugins,
-                     MetricsConfig metricsConfig, PluginInfo transientCacheConfig, PluginInfo tracerConfig,
-                     boolean fromZookeeper, String defaultZkHost, Set<Path> allowPaths, List<String> allowUrls,
-                     String configSetServiceClass) {
+  private NodeConfig(
+      String nodeName,
+      Path coreRootDirectory,
+      String coresLocatorClass,
+      String coreSorterClass,
+      Path solrDataHome,
+      Integer booleanQueryMaxClauseCount,
+      Path configSetBaseDirectory,
+      String sharedLibDirectory,
+      PluginInfo shardHandlerFactoryConfig,
+      UpdateShardHandlerConfig updateShardHandlerConfig,
+      String coreAdminHandlerClass,
+      Map<String, String> coreAdminHandlerActions,
+      String collectionsAdminHandlerClass,
+      String healthCheckHandlerClass,
+      String infoHandlerClass,
+      String configSetsHandlerClass,
+      LogWatcherConfig logWatcherConfig,
+      CloudConfig cloudConfig,
+      Integer coreLoadThreads,
+      int replayUpdatesThreads,
+      int transientCacheSize,
+      boolean useSchemaCache,
+      String managementPath,
+      Path solrHome,
+      SolrResourceLoader loader,
+      Properties solrProperties,
+      PluginInfo[] backupRepositoryPlugins,
+      MetricsConfig metricsConfig,
+      Map<String, CacheConfig> cachesConfig,
+      PluginInfo tracerConfig,
+      PluginInfo[] clusterPlugins,
+      String defaultZkHost,
+      Set<Path> allowPaths,
+      List<String> allowUrls,
+      boolean hideStackTraces,
+      String configSetServiceClass,
+      String modules,
+      Set<String> hiddenSysProps) {
     // all Path params here are absolute and normalized.
     this.nodeName = nodeName;
     this.coreRootDirectory = coreRootDirectory;
+    this.coresLocatorClass = coresLocatorClass;
+    this.coreSorterClass = coreSorterClass;
     this.solrDataHome = solrDataHome;
     this.booleanQueryMaxClauseCount = booleanQueryMaxClauseCount;
     this.configSetBaseDirectory = configSetBaseDirectory;
@@ -117,6 +174,7 @@ public class NodeConfig {
     this.shardHandlerFactoryConfig = shardHandlerFactoryConfig;
     this.updateShardHandlerConfig = updateShardHandlerConfig;
     this.coreAdminHandlerClass = coreAdminHandlerClass;
+    this.coreAdminHandlerActions = coreAdminHandlerActions;
     this.collectionsAdminHandlerClass = collectionsAdminHandlerClass;
     this.healthCheckHandlerClass = healthCheckHandlerClass;
     this.infoHandlerClass = infoHandlerClass;
@@ -133,20 +191,79 @@ public class NodeConfig {
     this.solrProperties = solrProperties;
     this.backupRepositoryPlugins = backupRepositoryPlugins;
     this.metricsConfig = metricsConfig;
-    this.transientCacheConfig = transientCacheConfig;
+    this.cachesConfig = cachesConfig == null ? Collections.emptyMap() : cachesConfig;
     this.tracerConfig = tracerConfig;
-    this.fromZookeeper = fromZookeeper;
+    this.clusterPlugins = clusterPlugins;
     this.defaultZkHost = defaultZkHost;
     this.allowPaths = allowPaths;
     this.allowUrls = allowUrls;
+    this.hideStackTraces = hideStackTraces;
     this.configSetServiceClass = configSetServiceClass;
+    this.modules = modules;
+    this.hiddenSysProps = hiddenSysProps;
+    this.hiddenSysPropPattern =
+        Pattern.compile("^(" + String.join("|", hiddenSysProps) + ")$", Pattern.CASE_INSENSITIVE)
+            .asMatchPredicate();
 
     if (this.cloudConfig != null && this.getCoreLoadThreadCount(false) < 2) {
-      throw new SolrException(SolrException.ErrorCode.SERVER_ERROR,
-          "SolrCloud requires a value of at least 2 for coreLoadThreads (configured value = " + this.coreLoadThreads + ")");
+      throw new SolrException(
+          SolrException.ErrorCode.SERVER_ERROR,
+          "SolrCloud requires a value of at least 2 for coreLoadThreads (configured value = "
+              + this.coreLoadThreads
+              + ")");
     }
     if (null == this.solrHome) throw new NullPointerException("solrHome");
     if (null == this.loader) throw new NullPointerException("loader");
+
+    if (this.clusterPlugins != null
+        && this.clusterPlugins.length > 0
+        && !ClusterPluginsSource.resolveClassName()
+            .equals(NodeConfigClusterPluginsSource.class.getName())) {
+      throw new SolrException(
+          ErrorCode.SERVER_ERROR,
+          "Cluster plugins found in solr.xml but the property "
+              + ContainerPluginsRegistry.CLUSTER_PLUGIN_EDIT_ENABLED
+              + " is set to true. Cluster plugins may only be declared in solr.xml with immutable configs.");
+    }
+
+    setupSharedLib();
+    initModules();
+  }
+
+  /**
+   * Get the NodeConfig. This may also be used by custom filters to load relevant configuration.
+   *
+   * @return the NodeConfig
+   */
+  public static NodeConfig loadNodeConfig(Path solrHome, Properties nodeProperties) {
+    final SolrResourceLoader loader = new SolrResourceLoader(solrHome);
+    initModules(loader, null);
+    nodeProperties = SolrXmlConfig.wrapAndSetZkHostFromSysPropIfNeeded(nodeProperties);
+
+    // TODO: Only job of this block is to
+    //  delay starting a solr core to satisfy
+    //  ZkFailoverTest test case...
+    String zkHost = nodeProperties.getProperty(SolrXmlConfig.ZK_HOST);
+    if (StrUtils.isNotNullOrEmpty(zkHost)) {
+      int startUpZkTimeOut = 1000 * Integer.getInteger("waitForZk", 0);
+      if (startUpZkTimeOut == 0) {
+        startUpZkTimeOut = SolrZkClientTimeout.DEFAULT_ZK_CLIENT_TIMEOUT;
+      }
+      try (SolrZkClient zkClient =
+          new SolrZkClient.Builder()
+              .withUrl(zkHost)
+              .withTimeout(startUpZkTimeOut, TimeUnit.MILLISECONDS)
+              .withConnTimeOut(startUpZkTimeOut, TimeUnit.MILLISECONDS)
+              .withSolrClassLoader(loader)
+              .build()) {
+        zkClient.exists("/configs", true);
+      } catch (Exception e) {
+        throw new SolrException(
+            ErrorCode.SERVER_ERROR, "Error occurred while testing zookeeper connection", e);
+      }
+    }
+
+    return SolrXmlConfig.fromSolrHome(solrHome, nodeProperties);
   }
 
   public String getConfigSetServiceClass() {
@@ -162,12 +279,34 @@ public class NodeConfig {
     return coreRootDirectory;
   }
 
+  public String getCoresLocatorClass() {
+    return this.coresLocatorClass;
+  }
+
+  public String getCoreSorterClass() {
+    return coreSorterClass;
+  }
+
   /** Absolute. */
   public Path getSolrDataHome() {
     return solrDataHome;
   }
 
-  /** 
+  /**
+   * Obtain the path of solr's binary installation directory, e.g. <code>/opt/solr</code>
+   *
+   * @return path to install dir or null if solr.install.dir not set.
+   */
+  public static Path getSolrInstallDir() {
+    String prop = System.getProperty(SolrDispatchFilter.SOLR_INSTALL_DIR_ATTRIBUTE);
+    if (prop == null || prop.isBlank()) {
+      log.debug("solr.install.dir property not initialized.");
+      return null;
+    }
+    return Paths.get(prop);
+  }
+
+  /**
    * If null, the lucene default will not be overridden
    *
    * @see IndexSearcher#setMaxClauseCount
@@ -175,7 +314,7 @@ public class NodeConfig {
   public Integer getBooleanQueryMaxClauseCount() {
     return booleanQueryMaxClauseCount;
   }
-  
+
   public PluginInfo getShardHandlerFactoryPluginInfo() {
     return shardHandlerFactoryConfig;
   }
@@ -185,8 +324,10 @@ public class NodeConfig {
   }
 
   public int getCoreLoadThreadCount(boolean zkAware) {
-    return coreLoadThreads == null ?
-        (zkAware ? NodeConfigBuilder.DEFAULT_CORE_LOAD_THREADS_IN_CLOUD : NodeConfigBuilder.DEFAULT_CORE_LOAD_THREADS)
+    return coreLoadThreads == null
+        ? (zkAware
+            ? NodeConfigBuilder.DEFAULT_CORE_LOAD_THREADS_IN_CLOUD
+            : NodeConfigBuilder.DEFAULT_CORE_LOAD_THREADS)
         : coreLoadThreads;
   }
 
@@ -195,10 +336,11 @@ public class NodeConfig {
   }
 
   /**
-   * Returns a directory, optionally a comma separated list of directories
-   * that will be added to Solr's class path for searching for classes and plugins.
-   * The path is either absolute or relative to SOLR_HOME. Note that SOLR_HOME/lib
-   * will always be added to the search path even if not included in this list.
+   * Returns a directory, optionally a comma separated list of directories that will be added to
+   * Solr's class path for searching for classes and plugins. The path is either absolute or
+   * relative to SOLR_HOME. Note that SOLR_HOME/lib will always be added to the search path even if
+   * not included in this list.
+   *
    * @return a comma separated list of path strings or null if no paths defined
    */
   public String getSharedLibDirectory() {
@@ -208,7 +350,11 @@ public class NodeConfig {
   public String getCoreAdminHandlerClass() {
     return coreAdminHandlerClass;
   }
-  
+
+  public Map<String, String> getCoreAdminHandlerActions() {
+    return coreAdminHandlerActions;
+  }
+
   public String getCollectionsHandlerClass() {
     return collectionsAdminHandlerClass;
   }
@@ -274,65 +420,175 @@ public class NodeConfig {
     return metricsConfig;
   }
 
-  public PluginInfo getTransientCachePluginInfo() { return transientCacheConfig; }
+  public Map<String, CacheConfig> getCachesConfig() {
+    return cachesConfig;
+  }
 
   public PluginInfo getTracerConfiguratorPluginInfo() {
     return tracerConfig;
   }
 
-  /** 
-   * True if this node config was loaded from zookeeper
-   * @see #getDefaultZkHost
-   */
-  public boolean isFromZookeeper() {
-    return fromZookeeper;
-  }
-  
-  /** 
-   * This method returns the default "zkHost" value for this node -- either read from the system properties, 
-   * or from the "extra" properties configured explicitly on the SolrDispatchFilter; or null if not specified.
-   *
-   * This is the value that would have been used when attempting locate the solr.xml in ZooKeeper (regardless of wether
-   * the file was actaully loaded from ZK or from local disk)
-   * 
-   * (This value should only be used for "accounting" purposes to track where the node config came from if 
-   * it <em>was</em> loaded from zk -- ie: to check if the chroot has already been applied.
-   * It may be different from the "zkHost" <em>configured</em> in the "cloud" section of the solr.xml,
-   * which should be used for all zk connections made by this node to participate in the cluster)
-   *
-   * @see #isFromZookeeper
-   * @see #getCloudConfig()
-   * @see CloudConfig#getZkHost()
-   */
-  public String getDefaultZkHost() {
-    return defaultZkHost;
+  public PluginInfo[] getClusterPlugins() {
+    return clusterPlugins;
   }
 
   /**
-   * Extra file paths that will be allowed for core creation, in addition to
-   * SOLR_HOME, SOLR_DATA_HOME and coreRootDir
+   * Extra file paths that will be allowed for core creation, in addition to SOLR_HOME,
+   * SOLR_DATA_HOME and coreRootDir
    */
-  public Set<Path> getAllowPaths() { return allowPaths; }
+  public Set<Path> getAllowPaths() {
+    return allowPaths;
+  }
 
-  /**
-   * Allow-list of Solr nodes URLs.
-   */
+  /** Allow-list of Solr nodes URLs. */
   public List<String> getAllowUrls() {
     return allowUrls;
+  }
+
+  public boolean hideStackTraces() {
+    return hideStackTraces;
+  }
+
+  // Configures SOLR_HOME/lib to the shared class loader
+  private void setupSharedLib() {
+    // Always add $SOLR_HOME/lib to the shared resource loader
+    Set<String> libDirs = new LinkedHashSet<>();
+    libDirs.add("lib");
+
+    Path solrInstallDir = getSolrInstallDir();
+    if (solrInstallDir == null) {
+      log.warn(
+          "Unable to add $SOLR_HOME/lib for shared lib since {} was not set.",
+          SolrDispatchFilter.SOLR_INSTALL_DIR_ATTRIBUTE);
+    } else {
+      // Always add $SOLR_TIP/lib to the shared resource loader
+      libDirs.add(solrInstallDir.resolve("lib").toAbsolutePath().normalize().toString());
+    }
+
+    if (StrUtils.isNotBlank(getSharedLibDirectory())) {
+      List<String> sharedLibs = Arrays.asList(getSharedLibDirectory().split("\\s*,\\s*"));
+      libDirs.addAll(sharedLibs);
+    }
+
+    addFoldersToSharedLib(libDirs);
+  }
+
+  /**
+   * Returns the modules as configured in solr.xml. Comma separated list. May be null if not defined
+   */
+  public String getModules() {
+    return modules;
+  }
+
+  /** Returns whether a given system property is hidden */
+  public boolean isSysPropHidden(String sysPropName) {
+    return hiddenSysPropPattern.test(sysPropName);
+  }
+
+  public static final String REDACTED_SYS_PROP_VALUE = "--REDACTED--";
+
+  /** Returns the a system property value, or "--REDACTED--" if the system property is hidden */
+  public String getRedactedSysPropValue(String sysPropName) {
+    return hiddenSysPropPattern.test(sysPropName)
+        ? REDACTED_SYS_PROP_VALUE
+        : System.getProperty(sysPropName);
+  }
+
+  // Finds every jar in each folder and adds it to shardLib, then reloads Lucene SPI
+  private void addFoldersToSharedLib(Set<String> libDirs) {
+    boolean modified = false;
+    // add the sharedLib to the shared resource loader before initializing cfg based plugins
+    for (String libDir : libDirs) {
+      Path libPath = getSolrHome().resolve(libDir);
+      if (Files.exists(libPath)) {
+        try {
+          loader.addToClassLoader(SolrResourceLoader.getURLs(libPath));
+          modified = true;
+        } catch (IOException e) {
+          throw new SolrException(ErrorCode.SERVER_ERROR, "Couldn't load libs: " + e, e);
+        }
+      }
+    }
+    if (modified) {
+      loader.reloadLuceneSPI();
+    }
+  }
+
+  // Adds modules to shared classpath
+  private void initModules() {
+    initModules(loader, getModules());
+  }
+
+  // can't we move this to ModuleUtils?
+  public static void initModules(SolrResourceLoader loader, String modules) {
+    var moduleNames = ModuleUtils.resolveModulesFromStringOrSyspropOrEnv(modules);
+    boolean modified = false;
+
+    Path solrInstallDir = getSolrInstallDir();
+    if (solrInstallDir == null) {
+      if (!moduleNames.isEmpty()) {
+        throw new SolrException(
+            ErrorCode.SERVER_ERROR,
+            "Unable to setup modules "
+                + moduleNames
+                + " because "
+                + SolrDispatchFilter.SOLR_INSTALL_DIR_ATTRIBUTE
+                + " was not set.");
+      }
+      return;
+    }
+    for (String m : moduleNames) {
+      if (!ModuleUtils.moduleExists(solrInstallDir, m)) {
+        log.error(
+            "No module with name {}, available modules are {}",
+            m,
+            ModuleUtils.listAvailableModules(solrInstallDir));
+        // Fail-fast if user requests a non-existing module
+        throw new SolrException(ErrorCode.SERVER_ERROR, "No module with name " + m);
+      }
+      Path moduleLibPath = ModuleUtils.getModuleLibPath(solrInstallDir, m);
+      if (Files.exists(moduleLibPath)) {
+        try {
+          List<URL> urls = SolrResourceLoader.getURLs(moduleLibPath);
+          loader.addToClassLoader(urls);
+          if (log.isInfoEnabled()) {
+            log.info("Added module {}. libPath={} with {} libs", m, moduleLibPath, urls.size());
+          }
+          if (log.isDebugEnabled()) {
+            log.debug("Libs loaded from {}: {}", moduleLibPath, urls);
+          }
+          modified = true;
+        } catch (IOException e) {
+          throw new SolrException(
+              ErrorCode.SERVER_ERROR, "Couldn't load libs for module " + m + ": " + e, e);
+        }
+      } else {
+        throw new SolrException(
+            ErrorCode.SERVER_ERROR, "Module lib folder " + moduleLibPath + " not found.");
+      }
+    }
+    if (modified) {
+      loader.reloadLuceneSPI();
+    }
   }
 
   public static class NodeConfigBuilder {
     // all Path fields here are absolute and normalized.
     private SolrResourceLoader loader;
     private Path coreRootDirectory;
+    private String coresLocatorClass = DEFAULT_CORESLOCATORCLASS;
+    private String coreSorterClass = DEFAULT_CORESORTERCLASS;
     private Path solrDataHome;
     private Integer booleanQueryMaxClauseCount;
     private Path configSetBaseDirectory;
     private String sharedLibDirectory;
+    private String modules;
+    private String hiddenSysProps;
     private PluginInfo shardHandlerFactoryConfig;
     private UpdateShardHandlerConfig updateShardHandlerConfig = UpdateShardHandlerConfig.DEFAULT;
     private String configSetServiceClass;
     private String coreAdminHandlerClass = DEFAULT_ADMINHANDLERCLASS;
+    private Map<String, String> coreAdminHandlerActions = Collections.emptyMap();
     private String collectionsAdminHandlerClass = DEFAULT_COLLECTIONSHANDLERCLASS;
     private String healthCheckHandlerClass = DEFAULT_HEALTHCHECKHANDLERCLASS;
     private String infoHandlerClass = DEFAULT_INFOHANDLERCLASS;
@@ -341,46 +597,53 @@ public class NodeConfig {
     private CloudConfig cloudConfig;
     private int coreLoadThreads = DEFAULT_CORE_LOAD_THREADS;
     private int replayUpdatesThreads = Runtime.getRuntime().availableProcessors();
-    @Deprecated
-    //Remove in 7.0 and put it all in the transientCache element in solrconfig.xml
-    private int transientCacheSize = DEFAULT_TRANSIENT_CACHE_SIZE;
+    @Deprecated private int transientCacheSize = -1;
     private boolean useSchemaCache = false;
     private String managementPath;
     private Properties solrProperties = new Properties();
     private PluginInfo[] backupRepositoryPlugins;
     private MetricsConfig metricsConfig;
-    private PluginInfo transientCacheConfig;
+    private Map<String, CacheConfig> cachesConfig;
     private PluginInfo tracerConfig;
-    private boolean fromZookeeper = false;
+    private PluginInfo[] clusterPlugins;
     private String defaultZkHost;
     private Set<Path> allowPaths = Collections.emptySet();
     private List<String> allowUrls = Collections.emptyList();
+    private boolean hideStackTrace = Boolean.getBoolean("solr.hideStackTrace");
 
     private final Path solrHome;
     private final String nodeName;
 
     public static final int DEFAULT_CORE_LOAD_THREADS = 3;
-    //No:of core load threads in cloud mode is set to a default of 8
+    // No:of core load threads in cloud mode is set to a default of 8
     public static final int DEFAULT_CORE_LOAD_THREADS_IN_CLOUD = 8;
 
-    public static final int DEFAULT_TRANSIENT_CACHE_SIZE = Integer.MAX_VALUE;
+    private static final String DEFAULT_CORESLOCATORCLASS =
+        "org.apache.solr.core.CorePropertiesLocator";
+    private static final String DEFAULT_CORESORTERCLASS = "org.apache.solr.core.CoreSorter";
+    private static final String DEFAULT_ADMINHANDLERCLASS =
+        "org.apache.solr.handler.admin.CoreAdminHandler";
+    private static final String DEFAULT_INFOHANDLERCLASS =
+        "org.apache.solr.handler.admin.InfoHandler";
+    private static final String DEFAULT_COLLECTIONSHANDLERCLASS =
+        "org.apache.solr.handler.admin.CollectionsHandler";
+    private static final String DEFAULT_HEALTHCHECKHANDLERCLASS =
+        "org.apache.solr.handler.admin.HealthCheckHandler";
+    private static final String DEFAULT_CONFIGSETSHANDLERCLASS =
+        "org.apache.solr.handler.admin.ConfigSetsHandler";
 
-    private static final String DEFAULT_ADMINHANDLERCLASS = "org.apache.solr.handler.admin.CoreAdminHandler";
-    private static final String DEFAULT_INFOHANDLERCLASS = "org.apache.solr.handler.admin.InfoHandler";
-    private static final String DEFAULT_COLLECTIONSHANDLERCLASS = "org.apache.solr.handler.admin.CollectionsHandler";
-    private static final String DEFAULT_HEALTHCHECKHANDLERCLASS = "org.apache.solr.handler.admin.HealthCheckHandler";
-    private static final String DEFAULT_CONFIGSETSHANDLERCLASS = "org.apache.solr.handler.admin.ConfigSetsHandler";
-
-    public static final Set<String> DEFAULT_HIDDEN_SYS_PROPS = new HashSet<>(Arrays.asList(
-        "javax.net.ssl.keyStorePassword",
-        "javax.net.ssl.trustStorePassword",
-        "basicauth",
-        "zkDigestPassword",
-        "zkDigestReadonlyPassword",
-        "aws.secretKey", // AWS SDK v1
-        "aws.secretAccessKey", // AWS SDK v2
-        "http.proxyPassword"
-    ));
+    public static final Set<String> DEFAULT_HIDDEN_SYS_PROPS =
+        Set.of(
+            "javax\\.net\\.ssl\\.keyStorePassword",
+            "javax\\.net\\.ssl\\.trustStorePassword",
+            "basicauth",
+            "zkDigestPassword",
+            "zkDigestReadonlyPassword",
+            "aws\\.secretKey", // AWS SDK v1
+            "aws\\.secretAccessKey", // AWS SDK v2
+            "http\\.proxyPassword",
+            ".*password.*",
+            ".*secret.*");
 
     public NodeConfigBuilder(String nodeName, Path solrHome) {
       this.nodeName = nodeName;
@@ -397,6 +660,16 @@ public class NodeConfig {
       return this;
     }
 
+    public NodeConfigBuilder setCoresLocatorClass(String coresLocatorClass) {
+      this.coresLocatorClass = coresLocatorClass;
+      return this;
+    }
+
+    public NodeConfigBuilder setCoreSorterClass(String coreSorterClass) {
+      this.coreSorterClass = coreSorterClass;
+      return this;
+    }
+
     public NodeConfigBuilder setSolrDataHome(String solrDataHomeString) {
       // keep it null unless explicitly set to non-empty value
       if (solrDataHomeString != null && !solrDataHomeString.isEmpty()) {
@@ -404,7 +677,7 @@ public class NodeConfig {
       }
       return this;
     }
-    
+
     public NodeConfigBuilder setBooleanQueryMaxClauseCount(Integer booleanQueryMaxClauseCount) {
       this.booleanQueryMaxClauseCount = booleanQueryMaxClauseCount;
       return this;
@@ -425,13 +698,20 @@ public class NodeConfig {
       return this;
     }
 
-    public NodeConfigBuilder setUpdateShardHandlerConfig(UpdateShardHandlerConfig updateShardHandlerConfig) {
+    public NodeConfigBuilder setUpdateShardHandlerConfig(
+        UpdateShardHandlerConfig updateShardHandlerConfig) {
       this.updateShardHandlerConfig = updateShardHandlerConfig;
       return this;
     }
 
     public NodeConfigBuilder setCoreAdminHandlerClass(String coreAdminHandlerClass) {
       this.coreAdminHandlerClass = coreAdminHandlerClass;
+      return this;
+    }
+
+    public NodeConfigBuilder setCoreAdminHandlerActions(
+        Map<String, String> coreAdminHandlerActions) {
+      this.coreAdminHandlerActions = coreAdminHandlerActions;
       return this;
     }
 
@@ -475,7 +755,8 @@ public class NodeConfig {
       return this;
     }
 
-    // Remove in Solr 7.0
+    // Remove in Solr 10.0
+
     @Deprecated
     public NodeConfigBuilder setTransientCacheSize(int transientCacheSize) {
       this.transientCacheSize = transientCacheSize;
@@ -506,9 +787,9 @@ public class NodeConfig {
       this.metricsConfig = metricsConfig;
       return this;
     }
-    
-    public NodeConfigBuilder setSolrCoreCacheFactoryConfig(PluginInfo transientCacheConfig) {
-      this.transientCacheConfig = transientCacheConfig;
+
+    public NodeConfigBuilder setCachesConfig(Map<String, CacheConfig> cachesConfig) {
+      this.cachesConfig = cachesConfig;
       return this;
     }
 
@@ -517,11 +798,11 @@ public class NodeConfig {
       return this;
     }
 
-    public NodeConfigBuilder setFromZookeeper(boolean fromZookeeper) {
-      this.fromZookeeper = fromZookeeper;
+    public NodeConfigBuilder setClusterPlugins(PluginInfo[] clusterPlugins) {
+      this.clusterPlugins = clusterPlugins;
       return this;
     }
-    
+
     public NodeConfigBuilder setDefaultZkHost(String defaultZkHost) {
       this.defaultZkHost = defaultZkHost;
       return this;
@@ -537,26 +818,110 @@ public class NodeConfig {
       return this;
     }
 
-    public NodeConfigBuilder setConfigSetServiceClass(String configSetServiceClass){
+    public NodeConfigBuilder setHideStackTrace(boolean hide) {
+      this.hideStackTrace = hide;
+      return this;
+    }
+
+    public NodeConfigBuilder setConfigSetServiceClass(String configSetServiceClass) {
       this.configSetServiceClass = configSetServiceClass;
       return this;
     }
 
+    /**
+     * Set list of modules to add to class path
+     *
+     * @param moduleNames comma separated list of module names to add to class loader, e.g.
+     *     "extracting,ltr,langid"
+     */
+    public NodeConfigBuilder setModules(String moduleNames) {
+      this.modules = moduleNames;
+      return this;
+    }
+
+    public NodeConfigBuilder setHiddenSysProps(String hiddenSysProps) {
+      this.hiddenSysProps = hiddenSysProps;
+      return this;
+    }
+
+    /**
+     * Finds list of hiddenSysProps requested by system property or environment variable or the
+     * default
+     *
+     * @return set of raw hidden sysProps, may be regex
+     */
+    private Set<String> resolveHiddenSysPropsFromSysPropOrEnvOrDefault(String hiddenSysProps) {
+      // Fall back to sysprop and env.var if nothing configured through solr.xml
+      if (!StrUtils.isNotNullOrEmpty(hiddenSysProps)) {
+        String fromProps = System.getProperty("solr.hiddenSysProps");
+        // Back-compat for solr 9x
+        // DEPRECATED: Remove in 10.0
+        if (StrUtils.isNotNullOrEmpty(fromProps)) {
+          fromProps = System.getProperty("solr.redaction.system.pattern");
+        }
+        String fromEnv = System.getenv("SOLR_HIDDEN_SYS_PROPS");
+        if (StrUtils.isNotNullOrEmpty(fromProps)) {
+          hiddenSysProps = fromProps;
+        } else if (StrUtils.isNotNullOrEmpty(fromEnv)) {
+          hiddenSysProps = fromEnv;
+        }
+      }
+      Set<String> hiddenSysPropSet = Collections.emptySet();
+      if (hiddenSysProps != null) {
+        hiddenSysPropSet =
+            StrUtils.splitSmart(hiddenSysProps, ',').stream()
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
+                .collect(Collectors.toSet());
+      }
+      return hiddenSysPropSet.isEmpty() ? DEFAULT_HIDDEN_SYS_PROPS : hiddenSysPropSet;
+    }
+
     public NodeConfig build() {
-      // if some things weren't set then set them now.  Simple primitives are set on the field declaration
+      // if some things weren't set then set them now.  Simple primitives are set on the field
+      // declaration
       if (loader == null) {
         loader = new SolrResourceLoader(solrHome);
       }
       return new NodeConfig(
-              nodeName, coreRootDirectory, solrDataHome, booleanQueryMaxClauseCount,
-              configSetBaseDirectory, sharedLibDirectory, shardHandlerFactoryConfig,
-              updateShardHandlerConfig, coreAdminHandlerClass, collectionsAdminHandlerClass,
-              healthCheckHandlerClass, infoHandlerClass, configSetsHandlerClass,
-              logWatcherConfig, cloudConfig, coreLoadThreads, replayUpdatesThreads,
-              transientCacheSize, useSchemaCache, managementPath,
-              solrHome, loader, solrProperties,
-              backupRepositoryPlugins, metricsConfig, transientCacheConfig, tracerConfig,
-              fromZookeeper, defaultZkHost, allowPaths, allowUrls, configSetServiceClass);
+          nodeName,
+          coreRootDirectory,
+          coresLocatorClass,
+          coreSorterClass,
+          solrDataHome,
+          booleanQueryMaxClauseCount,
+          configSetBaseDirectory,
+          sharedLibDirectory,
+          shardHandlerFactoryConfig,
+          updateShardHandlerConfig,
+          coreAdminHandlerClass,
+          coreAdminHandlerActions,
+          collectionsAdminHandlerClass,
+          healthCheckHandlerClass,
+          infoHandlerClass,
+          configSetsHandlerClass,
+          logWatcherConfig,
+          cloudConfig,
+          coreLoadThreads,
+          replayUpdatesThreads,
+          transientCacheSize,
+          useSchemaCache,
+          managementPath,
+          solrHome,
+          loader,
+          solrProperties,
+          backupRepositoryPlugins,
+          metricsConfig,
+          cachesConfig,
+          tracerConfig,
+          clusterPlugins,
+          defaultZkHost,
+          allowPaths,
+          allowUrls,
+          hideStackTrace,
+          configSetServiceClass,
+          modules,
+          resolveHiddenSysPropsFromSysPropOrEnvOrDefault(hiddenSysProps));
     }
 
     public NodeConfigBuilder setSolrResourceLoader(SolrResourceLoader resourceLoader) {
@@ -565,4 +930,3 @@ public class NodeConfig {
     }
   }
 }
-
