@@ -16,12 +16,13 @@
  */
 package org.apache.solr.update.processor;
 
+import static org.hamcrest.core.StringContains.containsString;
+
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
-
-import com.google.common.collect.ImmutableMap;
+import java.util.Map;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrInputDocument;
@@ -31,8 +32,6 @@ import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Ignore;
 import org.junit.Test;
-
-import static org.hamcrest.core.StringContains.containsString;
 
 public class AtomicUpdatesTest extends SolrTestCaseJ4 {
 
@@ -47,32 +46,30 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     h.update("<delete><query>*:*</query></delete>");
     assertU(commit());
   }
-  
+
   @Test
-  public void testRemove() throws Exception {
+  public void testRemove() {
     SolrInputDocument doc;
 
     doc = new SolrInputDocument();
     doc.setField("id", "1");
-    doc.setField("cat", new String[]{"aaa", "bbb", "ccc", "ccc", "ddd"});
+    doc.setField("cat", new String[] {"aaa", "bbb", "ccc", "ccc", "ddd"});
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "2");
-    doc.setField("cat", new String[]{"aaa", "bbb", "bbb", "ccc", "ddd"});
+    doc.setField("cat", new String[] {"aaa", "bbb", "bbb", "ccc", "ddd"});
     assertU(adoc(doc));
-
 
     doc = new SolrInputDocument();
     doc.setField("id", "20");
-    doc.setField("cat", new String[]{"aaa", "ccc", "ddd"});
+    doc.setField("cat", new String[] {"aaa", "ccc", "ddd"});
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "21");
-    doc.setField("cat", new String[]{"aaa", "bbb", "ddd"});
+    doc.setField("cat", new String[] {"aaa", "bbb", "ddd"});
     assertU(adoc(doc));
-
 
     assertU(commit());
 
@@ -80,26 +77,27 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     assertQ(req("q", "cat:bbb", "indent", "true"), "//result[@numFound = '3']");
     assertQ(req("q", "cat:ccc", "indent", "true"), "//result[@numFound = '3']");
 
-
     doc = new SolrInputDocument();
     doc.setField("id", "1");
-    List<String> removeList = new ArrayList<String>();
+    List<String> removeList = new ArrayList<>();
     removeList.add("bbb");
     removeList.add("ccc");
-    doc.setField("cat", ImmutableMap.of("remove", removeList)); //behavior when hitting Solr through ZK
+    doc.setField("cat", Map.of("remove", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
     assertQ(req("q", "cat:*", "indent", "true"), "//result[@numFound = '4']");
     assertQ(req("q", "cat:bbb", "indent", "true"), "//result[@numFound = '2']");
-    assertQ(req("q", "cat:ccc", "indent", "true"), "//result[@numFound = '3']"); // remove only removed first occurrence
+    assertQ(
+        req("q", "cat:ccc", "indent", "true"),
+        "//result[@numFound = '3']"); // remove only removed first occurrence
 
     doc = new SolrInputDocument();
     doc.setField("id", "21");
-    removeList = new ArrayList<String>();
+    removeList = new ArrayList<>();
     removeList.add("bbb");
     removeList.add("ccc");
-    doc.setField("cat", ImmutableMap.of("remove", removeList)); //behavior when hitting Solr through ZK
+    doc.setField("cat", Map.of("remove", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
@@ -108,7 +106,7 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
 
     doc = new SolrInputDocument();
     doc.setField("id", "1");
-    doc.setField("cat", ImmutableMap.of("remove", "aaa")); //behavior when hitting Solr directly
+    doc.setField("cat", Map.of("remove", "aaa")); // behavior when hitting Solr directly
 
     assertU(adoc(doc));
     assertU(commit());
@@ -118,29 +116,28 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
   }
 
   @Test
-  public void testRemoveInteger() throws Exception {
+  public void testRemoveInteger() {
     SolrInputDocument doc;
 
     doc = new SolrInputDocument();
     doc.setField("id", "1001");
-    doc.setField("intRemove", new String[]{"111", "222", "333", "333", "444"});
-    
+    doc.setField("intRemove", new String[] {"111", "222", "333", "333", "444"});
+
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "1002");
-    doc.setField("intRemove", new String[]{"111", "222", "222", "333", "444"});
+    doc.setField("intRemove", new String[] {"111", "222", "222", "333", "444"});
     assertU(adoc(doc));
-
 
     doc = new SolrInputDocument();
     doc.setField("id", "1020");
-    doc.setField("intRemove", new String[]{"111", "333", "444"});
+    doc.setField("intRemove", new String[] {"111", "333", "444"});
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "1021");
-    doc.setField("intRemove", new String[]{"111", "222", "444"});
+    doc.setField("intRemove", new String[] {"111", "222", "444"});
     assertU(adoc(doc));
 
     assertU(commit());
@@ -149,26 +146,29 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     assertQ(req("q", "intRemove:222", "indent", "true"), "//result[@numFound = '3']");
     assertQ(req("q", "intRemove:333", "indent", "true"), "//result[@numFound = '3']");
 
-
     doc = new SolrInputDocument();
     doc.setField("id", "1001");
-    List<Long> removeList = new ArrayList<Long>();
+    List<Long> removeList = new ArrayList<>();
     removeList.add(222L);
     removeList.add(333L);
-    doc.setField("intRemove", ImmutableMap.of("remove", removeList)); //behavior when hitting Solr through ZK
+    doc.setField(
+        "intRemove", Map.of("remove", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
     assertQ(req("q", "intRemove:[* TO *]", "indent", "true"), "//result[@numFound = '4']");
     assertQ(req("q", "intRemove:222", "indent", "true"), "//result[@numFound = '2']");
-    assertQ(req("q", "intRemove:333", "indent", "true"), "//result[@numFound = '3']"); // remove only removed first occurrence
+    assertQ(
+        req("q", "intRemove:333", "indent", "true"),
+        "//result[@numFound = '3']"); // remove only removed first occurrence
 
     doc = new SolrInputDocument();
     doc.setField("id", "1021");
-    removeList = new ArrayList<Long>();
+    removeList = new ArrayList<>();
     removeList.add(222L);
     removeList.add(333L);
-    doc.setField("intRemove", ImmutableMap.of("remove", removeList)); //behavior when hitting Solr through ZK
+    doc.setField(
+        "intRemove", Map.of("remove", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
@@ -177,7 +177,7 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
 
     doc = new SolrInputDocument();
     doc.setField("id", "1001");
-    doc.setField("intRemove", ImmutableMap.of("remove", 111)); //behavior when hitting Solr directly
+    doc.setField("intRemove", Map.of("remove", 111)); // behavior when hitting Solr directly
 
     assertU(adoc(doc));
     assertU(commit());
@@ -185,7 +185,8 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     assertQ(req("q", "intRemove:[* TO *]", "indent", "true"), "//result[@numFound = '4']");
     assertQ(req("q", "intRemove:111", "indent", "true"), "//result[@numFound = '3']");
 
-    // Test that mv int fields can have values removed prior to being committed to index (see SOLR-14971)
+    // Test that mv int fields can have values removed prior to being committed to index (see
+    // SOLR-14971)
     doc = new SolrInputDocument();
     doc.setField("id", "4242");
     doc.setField("values_is", new String[] {"111", "222", "333"});
@@ -193,7 +194,7 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
 
     doc = new SolrInputDocument();
     doc.setField("id", "4242");
-    doc.setField("values_is", ImmutableMap.of("remove", 111));
+    doc.setField("values_is", Map.of("remove", 111));
     assertU(adoc(doc));
     assertU(commit());
 
@@ -202,31 +203,29 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     assertQ(req("q", "values_is:333", "indent", "true"), "//result[@numFound = '1']");
   }
 
-
   @Test
-  public void testRemoveIntegerInDocSavedWithInteger() throws Exception {
+  public void testRemoveIntegerInDocSavedWithInteger() {
     SolrInputDocument doc;
 
     doc = new SolrInputDocument();
     doc.setField("id", "1001");
-    doc.setField("intRemove", new Integer[]{111, 222, 333, 333, 444});
-    
+    doc.setField("intRemove", new Integer[] {111, 222, 333, 333, 444});
+
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "1002");
-    doc.setField("intRemove", new Integer[]{111, 222, 222, 333, 444});
+    doc.setField("intRemove", new Integer[] {111, 222, 222, 333, 444});
     assertU(adoc(doc));
-
 
     doc = new SolrInputDocument();
     doc.setField("id", "1020");
-    doc.setField("intRemove", new Integer[]{111, 333, 444});
+    doc.setField("intRemove", new Integer[] {111, 333, 444});
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "1021");
-    doc.setField("intRemove", new Integer[]{111, 222, 444});
+    doc.setField("intRemove", new Integer[] {111, 222, 444});
     assertU(adoc(doc));
 
     assertU(commit());
@@ -235,26 +234,29 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     assertQ(req("q", "intRemove:222", "indent", "true"), "//result[@numFound = '3']");
     assertQ(req("q", "intRemove:333", "indent", "true"), "//result[@numFound = '3']");
 
-
     doc = new SolrInputDocument();
     doc.setField("id", "1001");
-    List<Long> removeList = new ArrayList<Long>();
+    List<Long> removeList = new ArrayList<>();
     removeList.add(222L);
     removeList.add(333L);
-    doc.setField("intRemove", ImmutableMap.of("remove", removeList)); //behavior when hitting Solr through ZK
+    doc.setField(
+        "intRemove", Map.of("remove", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
     assertQ(req("q", "intRemove:[* TO *]", "indent", "true"), "//result[@numFound = '4']");
     assertQ(req("q", "intRemove:222", "indent", "true"), "//result[@numFound = '2']");
-    assertQ(req("q", "intRemove:333", "indent", "true"), "//result[@numFound = '3']"); // remove only removed first occurrence
+    assertQ(
+        req("q", "intRemove:333", "indent", "true"),
+        "//result[@numFound = '3']"); // remove only removed first occurrence
 
     doc = new SolrInputDocument();
     doc.setField("id", "1021");
-    removeList = new ArrayList<Long>();
+    removeList = new ArrayList<>();
     removeList.add(222L);
     removeList.add(333L);
-    doc.setField("intRemove", ImmutableMap.of("remove", removeList)); //behavior when hitting Solr through ZK
+    doc.setField(
+        "intRemove", Map.of("remove", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
@@ -263,7 +265,7 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
 
     doc = new SolrInputDocument();
     doc.setField("id", "1001");
-    doc.setField("intRemove", ImmutableMap.of("remove", 111)); //behavior when hitting Solr directly
+    doc.setField("intRemove", Map.of("remove", 111)); // behavior when hitting Solr directly
 
     assertU(adoc(doc));
     assertU(commit());
@@ -271,7 +273,8 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     assertQ(req("q", "intRemove:[* TO *]", "indent", "true"), "//result[@numFound = '4']");
     assertQ(req("q", "intRemove:111", "indent", "true"), "//result[@numFound = '3']");
 
-    // Test that mv int fields can have values removed prior to being committed to index (see SOLR-14971)
+    // Test that mv int fields can have values removed prior to being committed to index (see
+    // SOLR-14971)
     doc = new SolrInputDocument();
     doc.setField("id", "4242");
     doc.setField("values_is", new Integer[] {111, 222, 333});
@@ -279,7 +282,7 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
 
     doc = new SolrInputDocument();
     doc.setField("id", "4242");
-    doc.setField("values_is", ImmutableMap.of("remove", 111));
+    doc.setField("values_is", Map.of("remove", 111));
     assertU(adoc(doc));
     assertU(commit());
 
@@ -289,27 +292,27 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
   }
 
   @Test
-  public void testRemoveIntegerUsingStringType() throws Exception {
+  public void testRemoveIntegerUsingStringType() {
     SolrInputDocument doc;
 
     doc = new SolrInputDocument();
     doc.setField("id", "1001");
-    doc.setField("intRemove", new String[]{"111", "222", "333", "333", "444"});
+    doc.setField("intRemove", new String[] {"111", "222", "333", "333", "444"});
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "1002");
-    doc.setField("intRemove", new String[]{"111", "222", "222", "333", "444"});
+    doc.setField("intRemove", new String[] {"111", "222", "222", "333", "444"});
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "1020");
-    doc.setField("intRemove", new String[]{"111", "333", "444"});
+    doc.setField("intRemove", new String[] {"111", "333", "444"});
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "1021");
-    doc.setField("intRemove", new String[]{"111", "222", "444"});
+    doc.setField("intRemove", new String[] {"111", "222", "444"});
     assertU(adoc(doc));
     assertU(commit());
 
@@ -317,26 +320,29 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     assertQ(req("q", "intRemove:222", "indent", "true"), "//result[@numFound = '3']");
     assertQ(req("q", "intRemove:333", "indent", "true"), "//result[@numFound = '3']");
 
-
     doc = new SolrInputDocument();
     doc.setField("id", "1001");
-    List<String> removeList = new ArrayList<String>();
+    List<String> removeList = new ArrayList<>();
     removeList.add("222");
     removeList.add("333");
-    doc.setField("intRemove", ImmutableMap.of("remove", removeList)); //behavior when hitting Solr through ZK
+    doc.setField(
+        "intRemove", Map.of("remove", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
     assertQ(req("q", "intRemove:[* TO *]", "indent", "true"), "//result[@numFound = '4']");
     assertQ(req("q", "intRemove:222", "indent", "true"), "//result[@numFound = '2']");
-    assertQ(req("q", "intRemove:333", "indent", "true"), "//result[@numFound = '3']"); // remove only removed first occurrence
+    assertQ(
+        req("q", "intRemove:333", "indent", "true"),
+        "//result[@numFound = '3']"); // remove only removed first occurrence
 
     doc = new SolrInputDocument();
     doc.setField("id", "1021");
-    removeList = new ArrayList<String>();
+    removeList = new ArrayList<>();
     removeList.add("222");
     removeList.add("333");
-    doc.setField("intRemove", ImmutableMap.of("remove", removeList)); //behavior when hitting Solr through ZK
+    doc.setField(
+        "intRemove", Map.of("remove", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
@@ -345,7 +351,7 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
 
     doc = new SolrInputDocument();
     doc.setField("id", "1001");
-    doc.setField("intRemove", ImmutableMap.of("remove", "111")); //behavior when hitting Solr directly
+    doc.setField("intRemove", Map.of("remove", "111")); // behavior when hitting Solr directly
 
     assertU(adoc(doc));
     assertU(commit());
@@ -355,27 +361,27 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
   }
 
   @Test
-  public void testRemoveIntegerUsingLongType() throws Exception {
+  public void testRemoveIntegerUsingLongType() {
     SolrInputDocument doc;
 
     doc = new SolrInputDocument();
     doc.setField("id", "1001");
-    doc.setField("intRemove", new Long[]{111L, 222L, 333L, 333L, 444L});
+    doc.setField("intRemove", new Long[] {111L, 222L, 333L, 333L, 444L});
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "1002");
-    doc.setField("intRemove", new Long[]{111L, 222L, 222L, 333L, 444L});
+    doc.setField("intRemove", new Long[] {111L, 222L, 222L, 333L, 444L});
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "1020");
-    doc.setField("intRemove", new Long[]{111L, 333L, 444L});
+    doc.setField("intRemove", new Long[] {111L, 333L, 444L});
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "1021");
-    doc.setField("intRemove", new Long[]{111L, 222L, 444L});
+    doc.setField("intRemove", new Long[] {111L, 222L, 444L});
     assertU(adoc(doc));
 
     assertU(commit());
@@ -386,23 +392,27 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
 
     doc = new SolrInputDocument();
     doc.setField("id", "1001");
-    List<Long> removeList = new ArrayList<Long>();
+    List<Long> removeList = new ArrayList<>();
     removeList.add(222L);
     removeList.add(333L);
-    doc.setField("intRemove", ImmutableMap.of("remove", removeList)); //behavior when hitting Solr through ZK
+    doc.setField(
+        "intRemove", Map.of("remove", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
     assertQ(req("q", "intRemove:[* TO *]", "indent", "true"), "//result[@numFound = '4']");
     assertQ(req("q", "intRemove:222", "indent", "true"), "//result[@numFound = '2']");
-    assertQ(req("q", "intRemove:333", "indent", "true"), "//result[@numFound = '3']"); // remove only removed first occurrence
+    assertQ(
+        req("q", "intRemove:333", "indent", "true"),
+        "//result[@numFound = '3']"); // remove only removed first occurrence
 
     doc = new SolrInputDocument();
     doc.setField("id", "1021");
-    removeList = new ArrayList<Long>();
+    removeList = new ArrayList<>();
     removeList.add(222L);
     removeList.add(333L);
-    doc.setField("intRemove", ImmutableMap.of("remove", removeList)); //behavior when hitting Solr through ZK
+    doc.setField(
+        "intRemove", Map.of("remove", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
@@ -411,7 +421,7 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
 
     doc = new SolrInputDocument();
     doc.setField("id", "1001");
-    doc.setField("intRemove", ImmutableMap.of("remove", 111L)); //behavior when hitting Solr directly
+    doc.setField("intRemove", Map.of("remove", 111L)); // behavior when hitting Solr directly
 
     assertU(adoc(doc));
     assertU(commit());
@@ -420,48 +430,47 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     assertQ(req("q", "intRemove:111", "indent", "true"), "//result[@numFound = '3']");
   }
 
-
   @Test
-  public void testRemoveIntegerUsingFloatType() throws Exception {
+  public void testRemoveIntegerUsingFloatType() {
     SolrInputDocument doc;
 
     doc = new SolrInputDocument();
-//    add with float in integer field
-//    doc.setField("id", "1001");
-//    doc.setField("intRemove", new Float[]{111.10F, 222.20F, 333.30F, 333.30F, 444.40F});
-//    assertU(adoc(doc));
-//
-//    doc = new SolrInputDocument();
-//    doc.setField("id", "1002");
-//    doc.setField("intRemove", new Float[]{111.10F, 222.20F, 222.20F, 333.30F, 444.40F});
-//    assertU(adoc(doc));
-//
-//    doc = new SolrInputDocument();
-//    doc.setField("id", "1020");
-//    doc.setField("intRemove", new Float[]{111.10F, 333.30F, 444.40F});
-//    assertU(adoc(doc));
-//
-//    doc = new SolrInputDocument();
-//    doc.setField("id", "1021");
-//    doc.setField("intRemove", new Float[]{111.10F, 222.20F, 444.40F});
+    //    add with float in integer field
+    //    doc.setField("id", "1001");
+    //    doc.setField("intRemove", new Float[]{111.10F, 222.20F, 333.30F, 333.30F, 444.40F});
+    //    assertU(adoc(doc));
+    //
+    //    doc = new SolrInputDocument();
+    //    doc.setField("id", "1002");
+    //    doc.setField("intRemove", new Float[]{111.10F, 222.20F, 222.20F, 333.30F, 444.40F});
+    //    assertU(adoc(doc));
+    //
+    //    doc = new SolrInputDocument();
+    //    doc.setField("id", "1020");
+    //    doc.setField("intRemove", new Float[]{111.10F, 333.30F, 444.40F});
+    //    assertU(adoc(doc));
+    //
+    //    doc = new SolrInputDocument();
+    //    doc.setField("id", "1021");
+    //    doc.setField("intRemove", new Float[]{111.10F, 222.20F, 444.40F});
 
     doc.setField("id", "1001");
-    doc.setField("intRemove", new String[]{"111", "222", "333", "333", "444"});
+    doc.setField("intRemove", new String[] {"111", "222", "333", "333", "444"});
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "1002");
-    doc.setField("intRemove", new String[]{"111", "222", "222", "333", "444"});
+    doc.setField("intRemove", new String[] {"111", "222", "222", "333", "444"});
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "1020");
-    doc.setField("intRemove", new String[]{"111", "333", "444"});
+    doc.setField("intRemove", new String[] {"111", "333", "444"});
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "1021");
-    doc.setField("intRemove", new String[]{"111", "222", "444"});    
+    doc.setField("intRemove", new String[] {"111", "222", "444"});
     assertU(adoc(doc));
 
     assertU(commit());
@@ -470,26 +479,29 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     assertQ(req("q", "intRemove:222", "indent", "true"), "//result[@numFound = '3']");
     assertQ(req("q", "intRemove:333", "indent", "true"), "//result[@numFound = '3']");
 
-
     doc = new SolrInputDocument();
     doc.setField("id", "1001");
-    List<Float> removeList = new ArrayList<Float>();
+    List<Float> removeList = new ArrayList<>();
     removeList.add(222.20F);
     removeList.add(333.30F);
-    doc.setField("intRemove", ImmutableMap.of("remove", removeList)); //behavior when hitting Solr through ZK
+    doc.setField(
+        "intRemove", Map.of("remove", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
     assertQ(req("q", "intRemove:[* TO *]", "indent", "true"), "//result[@numFound = '4']");
     assertQ(req("q", "intRemove:222", "indent", "true"), "//result[@numFound = '2']");
-    assertQ(req("q", "intRemove:333", "indent", "true"), "//result[@numFound = '3']"); // remove only removed first occurrence
+    assertQ(
+        req("q", "intRemove:333", "indent", "true"),
+        "//result[@numFound = '3']"); // remove only removed first occurrence
 
     doc = new SolrInputDocument();
     doc.setField("id", "1021");
-    removeList = new ArrayList<Float>();
+    removeList = new ArrayList<>();
     removeList.add(222.20F);
     removeList.add(333.30F);
-    doc.setField("intRemove", ImmutableMap.of("remove", removeList)); //behavior when hitting Solr through ZK
+    doc.setField(
+        "intRemove", Map.of("remove", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
@@ -498,7 +510,7 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
 
     doc = new SolrInputDocument();
     doc.setField("id", "1001");
-    doc.setField("intRemove", ImmutableMap.of("remove", 111L)); //behavior when hitting Solr directly
+    doc.setField("intRemove", Map.of("remove", 111L)); // behavior when hitting Solr directly
 
     assertU(adoc(doc));
     assertU(commit());
@@ -506,30 +518,31 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     assertQ(req("q", "intRemove:[* TO *]", "indent", "true"), "//result[@numFound = '4']");
     assertQ(req("q", "intRemove:111", "indent", "true"), "//result[@numFound = '3']");
   }
-  
 
   @Test
-  public void testRemoveIntegerUsingDoubleType() throws Exception {
+  public void testRemoveIntegerUsingDoubleType() {
     SolrInputDocument doc;
 
     doc = new SolrInputDocument();
     doc.setField("id", "1001");
-    doc.setField("intRemove", new String[]{"11111111", "22222222", "33333333", "33333333", "44444444"});
+    doc.setField(
+        "intRemove", new String[] {"11111111", "22222222", "33333333", "33333333", "44444444"});
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "1002");
-    doc.setField("intRemove", new String[]{"11111111", "22222222", "22222222", "33333333", "44444444"});
+    doc.setField(
+        "intRemove", new String[] {"11111111", "22222222", "22222222", "33333333", "44444444"});
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "1020");
-    doc.setField("intRemove", new String[]{"11111111", "33333333", "44444444"});
+    doc.setField("intRemove", new String[] {"11111111", "33333333", "44444444"});
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "1021");
-    doc.setField("intRemove", new String[]{"11111111", "22222222", "44444444"});
+    doc.setField("intRemove", new String[] {"11111111", "22222222", "44444444"});
     assertU(adoc(doc));
 
     assertU(commit());
@@ -538,26 +551,29 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     assertQ(req("q", "intRemove:22222222", "indent", "true"), "//result[@numFound = '3']");
     assertQ(req("q", "intRemove:33333333", "indent", "true"), "//result[@numFound = '3']");
 
-
     doc = new SolrInputDocument();
     doc.setField("id", "1001");
-    List<Double> removeList = new ArrayList<Double>();
+    List<Double> removeList = new ArrayList<>();
     removeList.add(22222222D);
     removeList.add(33333333D);
-    doc.setField("intRemove", ImmutableMap.of("remove", removeList)); //behavior when hitting Solr through ZK
+    doc.setField(
+        "intRemove", Map.of("remove", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
     assertQ(req("q", "intRemove:[* TO *]", "indent", "true"), "//result[@numFound = '4']");
     assertQ(req("q", "intRemove:22222222", "indent", "true"), "//result[@numFound = '2']");
-    assertQ(req("q", "intRemove:33333333", "indent", "true"), "//result[@numFound = '3']"); // remove only removed first occurrence
+    assertQ(
+        req("q", "intRemove:33333333", "indent", "true"),
+        "//result[@numFound = '3']"); // remove only removed first occurrence
 
     doc = new SolrInputDocument();
     doc.setField("id", "1021");
-    removeList = new ArrayList<Double>();
+    removeList = new ArrayList<>();
     removeList.add(22222222D);
     removeList.add(33333333D);
-    doc.setField("intRemove", ImmutableMap.of("remove", removeList)); //behavior when hitting Solr through ZK
+    doc.setField(
+        "intRemove", Map.of("remove", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
@@ -566,7 +582,7 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
 
     doc = new SolrInputDocument();
     doc.setField("id", "1001");
-    doc.setField("intRemove", ImmutableMap.of("remove", 11111111D)); //behavior when hitting Solr directly
+    doc.setField("intRemove", Map.of("remove", 11111111D)); // behavior when hitting Solr directly
 
     assertU(adoc(doc));
     assertU(commit());
@@ -574,49 +590,75 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     assertQ(req("q", "intRemove:[* TO *]", "indent", "true"), "//result[@numFound = '4']");
     assertQ(req("q", "intRemove:11111111", "indent", "true"), "//result[@numFound = '3']");
   }
-  
+
   @Test
-  public void testRemoveDateUsingStringType() throws Exception {
+  public void testRemoveDateUsingStringType() {
     SolrInputDocument doc;
 
     doc = new SolrInputDocument();
     doc.setField("id", "10001");
-    doc.setField("dateRemove", new String[]{"2014-09-01T12:00:00Z", "2014-09-02T12:00:00Z", "2014-09-03T12:00:00Z", "2014-09-03T12:00:00Z", "2014-09-04T12:00:00Z"});
+    doc.setField(
+        "dateRemove",
+        new String[] {
+          "2014-09-01T12:00:00Z",
+          "2014-09-02T12:00:00Z",
+          "2014-09-03T12:00:00Z",
+          "2014-09-03T12:00:00Z",
+          "2014-09-04T12:00:00Z"
+        });
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "10002");
-    doc.setField("dateRemove", new String[]{"2014-09-01T12:00:00Z", "2014-09-02T12:00:00Z", "2014-09-02T12:00:00Z", "2014-09-03T12:00:00Z", "2014-09-04T12:00:00Z"});
+    doc.setField(
+        "dateRemove",
+        new String[] {
+          "2014-09-01T12:00:00Z",
+          "2014-09-02T12:00:00Z",
+          "2014-09-02T12:00:00Z",
+          "2014-09-03T12:00:00Z",
+          "2014-09-04T12:00:00Z"
+        });
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "10020");
-    doc.setField("dateRemove", new String[]{"2014-09-01T12:00:00Z", "2014-09-03T12:00:00Z", "2014-09-04T12:00:00Z"});
+    doc.setField(
+        "dateRemove",
+        new String[] {"2014-09-01T12:00:00Z", "2014-09-03T12:00:00Z", "2014-09-04T12:00:00Z"});
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "10021");
-    doc.setField("dateRemove", new String[]{"2014-09-01T12:00:00Z", "2014-09-02T12:00:00Z", "2014-09-04T12:00:00Z"});
+    doc.setField(
+        "dateRemove",
+        new String[] {"2014-09-01T12:00:00Z", "2014-09-02T12:00:00Z", "2014-09-04T12:00:00Z"});
     assertU(adoc(doc));
 
     assertU(commit());
 
-    boolean isPointField = h.getCore().getLatestSchema().getField("dateRemove").getType().isPointField();
+    boolean isPointField =
+        h.getCore().getLatestSchema().getField("dateRemove").getType().isPointField();
     if (isPointField) {
       assertQ(req("q", "dateRemove:[* TO *]", "indent", "true"), "//result[@numFound = '4']");
     } else {
       assertQ(req("q", "dateRemove:*", "indent", "true"), "//result[@numFound = '4']");
     }
-    assertQ(req("q", "dateRemove:\"2014-09-02T12:00:00Z\"", "indent", "true"), "//result[@numFound = '3']");
-    assertQ(req("q", "dateRemove:\"2014-09-03T12:00:00Z\"", "indent", "true"), "//result[@numFound = '3']");
+    assertQ(
+        req("q", "dateRemove:\"2014-09-02T12:00:00Z\"", "indent", "true"),
+        "//result[@numFound = '3']");
+    assertQ(
+        req("q", "dateRemove:\"2014-09-03T12:00:00Z\"", "indent", "true"),
+        "//result[@numFound = '3']");
 
     doc = new SolrInputDocument();
     doc.setField("id", "10001");
-    List<String> removeList = new ArrayList<String>();
+    List<String> removeList = new ArrayList<>();
     removeList.add("2014-09-02T12:00:00Z");
     removeList.add("2014-09-03T12:00:00Z");
 
-    doc.setField("dateRemove", ImmutableMap.of("remove", removeList)); //behavior when hitting Solr through ZK
+    doc.setField(
+        "dateRemove", Map.of("remove", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
@@ -625,14 +667,17 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     } else {
       assertQ(req("q", "dateRemove:*", "indent", "true"), "//result[@numFound = '4']");
     }
-    assertQ(req("q", "dateRemove:\"2014-09-02T12:00:00Z\"", "indent", "true"), "//result[@numFound = '2']");
+    assertQ(
+        req("q", "dateRemove:\"2014-09-02T12:00:00Z\"", "indent", "true"),
+        "//result[@numFound = '2']");
 
     doc = new SolrInputDocument();
     doc.setField("id", "10021");
-    removeList = new ArrayList<String>();
+    removeList = new ArrayList<>();
     removeList.add("2014-09-02T12:00:00Z");
     removeList.add("2014-09-03T12:00:00Z");
-    doc.setField("dateRemove", ImmutableMap.of("remove", removeList)); //behavior when hitting Solr through ZK
+    doc.setField(
+        "dateRemove", Map.of("remove", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
@@ -641,11 +686,15 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     } else {
       assertQ(req("q", "dateRemove:*", "indent", "true"), "//result[@numFound = '4']");
     }
-    assertQ(req("q", "dateRemove:\"2014-09-02T12:00:00Z\"", "indent", "true"), "//result[@numFound = '1']");
+    assertQ(
+        req("q", "dateRemove:\"2014-09-02T12:00:00Z\"", "indent", "true"),
+        "//result[@numFound = '1']");
 
     doc = new SolrInputDocument();
     doc.setField("id", "10001");
-    doc.setField("dateRemove", ImmutableMap.of("remove", "2014-09-01T12:00:00Z")); //behavior when hitting Solr directly
+    doc.setField(
+        "dateRemove",
+        Map.of("remove", "2014-09-01T12:00:00Z")); // behavior when hitting Solr directly
 
     assertU(adoc(doc));
     assertU(commit());
@@ -655,48 +704,62 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     } else {
       assertQ(req("q", "dateRemove:*", "indent", "true"), "//result[@numFound = '4']");
     }
-    assertQ(req("q", "dateRemove:\"2014-09-01T12:00:00Z\"", "indent", "true"), "//result[@numFound = '3']");
+    assertQ(
+        req("q", "dateRemove:\"2014-09-01T12:00:00Z\"", "indent", "true"),
+        "//result[@numFound = '3']");
   }
-  
+
   @Ignore("Remove Date is not supported in other formats than UTC")
   @Test
-  public void testRemoveDateUsingDateType() throws Exception {
+  public void testRemoveDateUsingDateType() {
     SolrInputDocument doc;
 
     doc = new SolrInputDocument();
     doc.setField("id", "10001");
     Date tempDate = DateMathParser.parseMath(null, "2014-02-01T12:00:00Z");
-    doc.setField("dateRemove", new Date[]{DateMathParser.parseMath(null, "2014-02-01T12:00:00Z"),
-        DateMathParser.parseMath(null, "2014-07-02T12:00:00Z"),
-        DateMathParser.parseMath(null, "2014-02-03T12:00:00Z"),
-        DateMathParser.parseMath(null, "2014-02-03T12:00:00Z"),
-        DateMathParser.parseMath(null, "2014-02-04T12:00:00Z")
+    doc.setField(
+        "dateRemove",
+        new Date[] {
+          DateMathParser.parseMath(null, "2014-02-01T12:00:00Z"),
+          DateMathParser.parseMath(null, "2014-07-02T12:00:00Z"),
+          DateMathParser.parseMath(null, "2014-02-03T12:00:00Z"),
+          DateMathParser.parseMath(null, "2014-02-03T12:00:00Z"),
+          DateMathParser.parseMath(null, "2014-02-04T12:00:00Z")
         });
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "10002");
-    doc.setField("dateRemove", new Date[]{DateMathParser.parseMath(null, "2014-02-01T12:00:00Z"),
-        DateMathParser.parseMath(null, "2014-07-02T12:00:00Z"),
-        DateMathParser.parseMath(null, "2014-02-02T12:00:00Z"),
-        DateMathParser.parseMath(null, "2014-02-03T12:00:00Z"),
-        DateMathParser.parseMath(null, "2014-02-04T12:00:00Z")
+    doc.setField(
+        "dateRemove",
+        new Date[] {
+          DateMathParser.parseMath(null, "2014-02-01T12:00:00Z"),
+          DateMathParser.parseMath(null, "2014-07-02T12:00:00Z"),
+          DateMathParser.parseMath(null, "2014-02-02T12:00:00Z"),
+          DateMathParser.parseMath(null, "2014-02-03T12:00:00Z"),
+          DateMathParser.parseMath(null, "2014-02-04T12:00:00Z")
         });
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "10020");
-    doc.setField("dateRemove", new Date[]{DateMathParser.parseMath(null, "2014-02-01T12:00:00Z"),
-        DateMathParser.parseMath(null, "2014-02-03T12:00:00Z"),
-        DateMathParser.parseMath(null, "2014-02-04T12:00:00Z")
+    doc.setField(
+        "dateRemove",
+        new Date[] {
+          DateMathParser.parseMath(null, "2014-02-01T12:00:00Z"),
+          DateMathParser.parseMath(null, "2014-02-03T12:00:00Z"),
+          DateMathParser.parseMath(null, "2014-02-04T12:00:00Z")
         });
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "10021");
-    doc.setField("dateRemove", new Date[]{DateMathParser.parseMath(null, "2014-02-01T12:00:00Z"),
-        DateMathParser.parseMath(null, "2014-02-02T12:00:00Z"),
-        DateMathParser.parseMath(null, "2014-02-04T12:00:00Z")
+    doc.setField(
+        "dateRemove",
+        new Date[] {
+          DateMathParser.parseMath(null, "2014-02-01T12:00:00Z"),
+          DateMathParser.parseMath(null, "2014-02-02T12:00:00Z"),
+          DateMathParser.parseMath(null, "2014-02-04T12:00:00Z")
         });
     assertU(adoc(doc));
 
@@ -704,73 +767,91 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
 
     assertQ(req("q", "dateRemove:*", "indent", "true"), "//result[@numFound = '4']");
     String dateString = DateMathParser.parseMath(null, "2014-02-02T12:00:00Z").toString();
-//    assertQ(req("q", "dateRemove:"+URLEncoder.encode(dateString, "UTF-8"), "indent", "true"), "//result[@numFound = '3']");
-//    assertQ(req("q", "dateRemove:\"2014-09-02T12:00:00Z\"", "indent", "true"), "//result[@numFound = '3']");
-//    assertQ(req("q", "dateRemove:"+dateString, "indent", "true"), "//result[@numFound = '3']"); //Sun Feb 02 10:00:00 FNT 2014
-    assertQ(req("q", "dateRemove:\"Sun Feb 02 10:00:00 FNT 2014\"", "indent", "true"), "//result[@numFound = '3']"); //Sun Feb 02 10:00:00 FNT 2014
-
+    //    assertQ(req("q", "dateRemove:"+URLEncoder.encode(dateString, "UTF-8"), "indent", "true"),
+    // "//result[@numFound = '3']");
+    //    assertQ(req("q", "dateRemove:\"2014-09-02T12:00:00Z\"", "indent", "true"),
+    // "//result[@numFound = '3']");
+    //    assertQ(req("q", "dateRemove:"+dateString, "indent", "true"), "//result[@numFound =
+    // '3']"); //Sun Feb 02 10:00:00 FNT 2014
+    assertQ(
+        req("q", "dateRemove:\"Sun Feb 02 10:00:00 FNT 2014\"", "indent", "true"),
+        "//result[@numFound = '3']"); // Sun Feb 02 10:00:00 FNT 2014
 
     doc = new SolrInputDocument();
     doc.setField("id", "10001");
-    List<Date> removeList = new ArrayList<Date>();
+    List<Date> removeList = new ArrayList<>();
     removeList.add(DateMathParser.parseMath(null, "2014-09-02T12:00:00Z"));
     removeList.add(DateMathParser.parseMath(null, "2014-09-03T12:00:00Z"));
 
-    doc.setField("dateRemove", ImmutableMap.of("remove", removeList)); //behavior when hitting Solr through ZK
+    doc.setField(
+        "dateRemove", Map.of("remove", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
     assertQ(req("q", "dateRemove:*", "indent", "true"), "//result[@numFound = '4']");
-    assertQ(req("q", "dateRemove:\"2014-09-02T12:00:00Z\"", "indent", "true"), "//result[@numFound = '2']");
-    assertQ(req("q", "dateRemove:\"2014-09-03T12:00:00Z\"", "indent", "true"), "//result[@numFound = '3']"); // remove only removed first occurrence
+    assertQ(
+        req("q", "dateRemove:\"2014-09-02T12:00:00Z\"", "indent", "true"),
+        "//result[@numFound = '2']");
+    assertQ(
+        req("q", "dateRemove:\"2014-09-03T12:00:00Z\"", "indent", "true"),
+        "//result[@numFound = '3']"); // remove only removed first occurrence
 
     doc = new SolrInputDocument();
     doc.setField("id", "10021");
-    removeList = new ArrayList<Date>();
+    removeList = new ArrayList<>();
     removeList.add(DateMathParser.parseMath(null, "2014-09-02T12:00:00Z"));
     removeList.add(DateMathParser.parseMath(null, "2014-09-03T12:00:00Z"));
-    doc.setField("dateRemove", ImmutableMap.of("remove", removeList)); //behavior when hitting Solr through ZK
+    doc.setField(
+        "dateRemove", Map.of("remove", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
     assertQ(req("q", "dateRemove:*", "indent", "true"), "//result[@numFound = '4']");
-    assertQ(req("q", "dateRemove:\"2014-09-02T12:00:00Z\"", "indent", "true"), "//result[@numFound = '1']");
+    assertQ(
+        req("q", "dateRemove:\"2014-09-02T12:00:00Z\"", "indent", "true"),
+        "//result[@numFound = '1']");
 
     doc = new SolrInputDocument();
     doc.setField("id", "10001");
-    doc.setField("dateRemove", ImmutableMap.of("remove", DateMathParser.parseMath(null, "2014-09-01T12:00:00Z"))); //behavior when hitting Solr directly
+    doc.setField(
+        "dateRemove",
+        Map.of(
+            "remove",
+            DateMathParser.parseMath(
+                null, "2014-09-01T12:00:00Z"))); // behavior when hitting Solr directly
 
     assertU(adoc(doc));
     assertU(commit());
 
     assertQ(req("q", "dateRemove:*", "indent", "true"), "//result[@numFound = '4']");
-    assertQ(req("q", "dateRemove:\"2014-09-01T12:00:00Z\"", "indent", "true"), "//result[@numFound = '3']");
+    assertQ(
+        req("q", "dateRemove:\"2014-09-01T12:00:00Z\"", "indent", "true"),
+        "//result[@numFound = '3']");
   }
- 
+
   @Test
-  public void testRemoveFloatUsingFloatType() throws Exception {
+  public void testRemoveFloatUsingFloatType() {
     SolrInputDocument doc;
 
     doc = new SolrInputDocument();
     doc.setField("id", "10001");
-    doc.setField("floatRemove", new Float[]{111.111F, 222.222F, 333.333F, 333.333F, 444.444F});
+    doc.setField("floatRemove", new Float[] {111.111F, 222.222F, 333.333F, 333.333F, 444.444F});
 
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "10002");
-    doc.setField("floatRemove", new Float[]{111.111F, 222.222F, 222.222F, 333.333F, 444.444F});
+    doc.setField("floatRemove", new Float[] {111.111F, 222.222F, 222.222F, 333.333F, 444.444F});
     assertU(adoc(doc));
-
 
     doc = new SolrInputDocument();
     doc.setField("id", "10020");
-    doc.setField("floatRemove", new Float[]{111.111F, 333.333F, 444.444F});
+    doc.setField("floatRemove", new Float[] {111.111F, 333.333F, 444.444F});
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "10021");
-    doc.setField("floatRemove", new Float[]{111.111F, 222.222F, 444.444F});
+    doc.setField("floatRemove", new Float[] {111.111F, 222.222F, 444.444F});
     assertU(adoc(doc));
 
     assertU(commit());
@@ -778,14 +859,14 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     assertQ(req("q", "floatRemove:[* TO *]", "indent", "true"), "//result[@numFound = '4']");
     assertQ(req("q", "floatRemove:\"222.222\"", "indent", "true"), "//result[@numFound = '3']");
 
-
     doc = new SolrInputDocument();
     doc.setField("id", "10001");
-    List<Float> removeList = new ArrayList<Float>();
+    List<Float> removeList = new ArrayList<>();
     removeList.add(222.222F);
     removeList.add(333.333F);
 
-    doc.setField("floatRemove", ImmutableMap.of("remove", removeList)); //behavior when hitting Solr through ZK
+    doc.setField(
+        "floatRemove", Map.of("remove", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
@@ -794,10 +875,11 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
 
     doc = new SolrInputDocument();
     doc.setField("id", "10021");
-    removeList = new ArrayList<Float>();
+    removeList = new ArrayList<>();
     removeList.add(222.222F);
     removeList.add(333.333F);
-    doc.setField("floatRemove", ImmutableMap.of("remove", removeList)); //behavior when hitting Solr through ZK
+    doc.setField(
+        "floatRemove", Map.of("remove", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
@@ -806,7 +888,7 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
 
     doc = new SolrInputDocument();
     doc.setField("id", "10001");
-    doc.setField("floatRemove", ImmutableMap.of("remove", "111.111")); //behavior when hitting Solr directly
+    doc.setField("floatRemove", Map.of("remove", "111.111")); // behavior when hitting Solr directly
 
     assertU(adoc(doc));
     assertU(commit());
@@ -814,31 +896,32 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     assertQ(req("q", "floatRemove:[* TO *]", "indent", "true"), "//result[@numFound = '4']");
     assertQ(req("q", "floatRemove:\"111.111\"", "indent", "true"), "//result[@numFound = '3']");
   }
-  
+
   @Test
-  public void testRemoveFloatUsingStringType() throws Exception {
+  public void testRemoveFloatUsingStringType() {
     SolrInputDocument doc;
 
     doc = new SolrInputDocument();
     doc.setField("id", "10001");
-    doc.setField("floatRemove", new String[]{"111.111", "222.222", "333.333", "333.333", "444.444"});
+    doc.setField(
+        "floatRemove", new String[] {"111.111", "222.222", "333.333", "333.333", "444.444"});
 
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "10002");
-    doc.setField("floatRemove", new String[]{"111.111", "222.222", "222.222", "333.333", "444.444"});
+    doc.setField(
+        "floatRemove", new String[] {"111.111", "222.222", "222.222", "333.333", "444.444"});
     assertU(adoc(doc));
-
 
     doc = new SolrInputDocument();
     doc.setField("id", "10020");
-    doc.setField("floatRemove", new String[]{"111.111", "333.333", "444.444"});
+    doc.setField("floatRemove", new String[] {"111.111", "333.333", "444.444"});
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "10021");
-    doc.setField("floatRemove", new String[]{"111.111", "222.222", "444.444"});
+    doc.setField("floatRemove", new String[] {"111.111", "222.222", "444.444"});
     assertU(adoc(doc));
 
     assertU(commit());
@@ -847,27 +930,30 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     assertQ(req("q", "floatRemove:\"222.222\"", "indent", "true"), "//result[@numFound = '3']");
     assertQ(req("q", "floatRemove:\"333.333\"", "indent", "true"), "//result[@numFound = '3']");
 
-
     doc = new SolrInputDocument();
     doc.setField("id", "10001");
-    List<String> removeList = new ArrayList<String>();
+    List<String> removeList = new ArrayList<>();
     removeList.add("222.222");
     removeList.add("333.333");
 
-    doc.setField("floatRemove", ImmutableMap.of("remove", removeList)); //behavior when hitting Solr through ZK
+    doc.setField(
+        "floatRemove", Map.of("remove", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
     assertQ(req("q", "floatRemove:[* TO *]", "indent", "true"), "//result[@numFound = '4']");
     assertQ(req("q", "floatRemove:\"222.222\"", "indent", "true"), "//result[@numFound = '2']");
-    assertQ(req("q", "floatRemove:\"333.333\"", "indent", "true"), "//result[@numFound = '3']"); // remove only removed first occurrence
+    assertQ(
+        req("q", "floatRemove:\"333.333\"", "indent", "true"),
+        "//result[@numFound = '3']"); // remove only removed first occurrence
 
     doc = new SolrInputDocument();
     doc.setField("id", "10021");
-    removeList = new ArrayList<String>();
+    removeList = new ArrayList<>();
     removeList.add("222.222");
     removeList.add("333.333");
-    doc.setField("floatRemove", ImmutableMap.of("remove", removeList)); //behavior when hitting Solr through ZK
+    doc.setField(
+        "floatRemove", Map.of("remove", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
@@ -876,7 +962,7 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
 
     doc = new SolrInputDocument();
     doc.setField("id", "10001");
-    doc.setField("floatRemove", ImmutableMap.of("remove", "111.111")); //behavior when hitting Solr directly
+    doc.setField("floatRemove", Map.of("remove", "111.111")); // behavior when hitting Solr directly
 
     assertU(adoc(doc));
     assertU(commit());
@@ -886,30 +972,28 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
   }
 
   @Test
-  public void testRemoveregex() throws Exception {
+  public void testRemoveregex() {
     SolrInputDocument doc;
 
     doc = new SolrInputDocument();
     doc.setField("id", "1");
-    doc.setField("cat", new String[]{"aaa", "bbb", "ccc", "ccc", "ddd"});
+    doc.setField("cat", new String[] {"aaa", "bbb", "ccc", "ccc", "ddd"});
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "2");
-    doc.setField("cat", new String[]{"aaa", "bbb", "bbb", "ccc", "ddd"});
+    doc.setField("cat", new String[] {"aaa", "bbb", "bbb", "ccc", "ddd"});
     assertU(adoc(doc));
-
 
     doc = new SolrInputDocument();
     doc.setField("id", "20");
-    doc.setField("cat", new String[]{"aaa", "ccc", "ddd"});
+    doc.setField("cat", new String[] {"aaa", "ccc", "ddd"});
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "21");
-    doc.setField("cat", new String[]{"aaa", "bbb", "ddd"});
+    doc.setField("cat", new String[] {"aaa", "bbb", "ddd"});
     assertU(adoc(doc));
-
 
     assertU(commit());
 
@@ -917,26 +1001,27 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     assertQ(req("q", "cat:bbb", "indent", "true"), "//result[@numFound = '3']");
     assertQ(req("q", "cat:ccc", "indent", "true"), "//result[@numFound = '3']");
 
-
     doc = new SolrInputDocument();
     doc.setField("id", "1");
     List<String> removeList = new ArrayList<>();
     removeList.add(".b.");
     removeList.add("c+c");
-    doc.setField("cat", ImmutableMap.of("removeregex", removeList)); //behavior when hitting Solr through ZK
+    doc.setField("cat", Map.of("removeregex", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
     assertQ(req("q", "cat:*", "indent", "true"), "//result[@numFound = '4']");
     assertQ(req("q", "cat:bbb", "indent", "true"), "//result[@numFound = '2']");
-    assertQ(req("q", "cat:ccc", "indent", "true"), "//result[@numFound = '2']"); // removeregex does remove all occurrences
+    assertQ(
+        req("q", "cat:ccc", "indent", "true"),
+        "//result[@numFound = '2']"); // removeregex does remove all occurrences
 
     doc = new SolrInputDocument();
     doc.setField("id", "21");
     removeList = new ArrayList<>();
     removeList.add("bb*");
     removeList.add("cc+");
-    doc.setField("cat", ImmutableMap.of("removeregex", removeList)); //behavior when hitting Solr through ZK
+    doc.setField("cat", Map.of("removeregex", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
@@ -945,7 +1030,7 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
 
     doc = new SolrInputDocument();
     doc.setField("id", "1");
-    doc.setField("cat", ImmutableMap.of("removeregex", "a.a")); //behavior when hitting Solr directly
+    doc.setField("cat", Map.of("removeregex", "a.a")); // behavior when hitting Solr directly
 
     assertU(adoc(doc));
     assertU(commit());
@@ -955,52 +1040,55 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
   }
 
   @Test
-  public void testRemoveregexMustMatchWholeValue() throws Exception {
+  public void testRemoveregexMustMatchWholeValue() {
     SolrInputDocument doc;
 
     doc = new SolrInputDocument();
     doc.setField("id", "1");
-    doc.setField("cat", new String[]{"aaa", "bbb", "ccc", "ccc", "ddd"});
+    doc.setField("cat", new String[] {"aaa", "bbb", "ccc", "ccc", "ddd"});
     assertU(adoc(doc));
     assertU(commit());
 
     assertQ(req("q", "cat:*", "indent", "true"), "//result[@numFound = '1']");
     assertQ(req("q", "cat:bbb", "indent", "true"), "//result[@numFound = '1']");
 
-
     doc = new SolrInputDocument();
     doc.setField("id", "1");
     List<String> removeList = new ArrayList<>();
     removeList.add("bb");
-    doc.setField("cat", ImmutableMap.of("removeregex", removeList)); //behavior when hitting Solr through ZK
+    doc.setField("cat", Map.of("removeregex", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
     assertQ(req("q", "cat:*", "indent", "true"), "//result[@numFound = '1']");
-    assertQ(req("q", "cat:bbb", "indent", "true"), "//result[@numFound = '1']"); // Was not removed - regex didn't match whole value
+    assertQ(
+        req("q", "cat:bbb", "indent", "true"),
+        "//result[@numFound = '1']"); // Was not removed - regex didn't match whole value
 
     doc = new SolrInputDocument();
     doc.setField("id", "1");
     removeList = new ArrayList<>();
     removeList.add("bbb");
-    doc.setField("cat", ImmutableMap.of("removeregex", removeList)); //behavior when hitting Solr through ZK
+    doc.setField("cat", Map.of("removeregex", removeList)); // behavior when hitting Solr through ZK
     assertU(adoc(doc));
     assertU(commit());
 
     assertQ(req("q", "cat:*", "indent", "true"), "//result[@numFound = '1']");
-    assertQ(req("q", "cat:bbb", "indent", "true"), "//result[@numFound = '0']"); // Was removed now - regex matches
+    assertQ(
+        req("q", "cat:bbb", "indent", "true"),
+        "//result[@numFound = '0']"); // Was removed now - regex matches
   }
 
   @Test
-  public void testAdd() throws Exception {
+  public void testAdd() {
     SolrInputDocument doc = new SolrInputDocument();
     doc.setField("id", "3");
-    doc.setField("cat", new String[]{"aaa", "ccc"});
+    doc.setField("cat", new String[] {"aaa", "ccc"});
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "4");
-    doc.setField("cat", new String[]{"aaa", "ccc"});
+    doc.setField("cat", new String[] {"aaa", "ccc"});
     assertU(adoc(doc));
 
     assertU(commit());
@@ -1012,10 +1100,9 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     assertQ(req("q", "cat:*", "indent", "true", "fl", "id"), "//result[@numFound = '2']");
     assertQ(req("q", "cat:bbb", "indent", "true"), "//result[@numFound = '0']");
 
-
     doc = new SolrInputDocument();
     doc.setField("id", "3");
-    doc.setField("cat", ImmutableMap.of("add", "bbb"));
+    doc.setField("cat", Map.of("add", "bbb"));
     assertU(adoc(doc));
     assertU(commit());
 
@@ -1024,16 +1111,16 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
   }
 
   @Test
-  public void testAddDistinct() throws Exception {
+  public void testAddDistinct() {
     SolrInputDocument doc = new SolrInputDocument();
     doc.setField("id", "3");
-    doc.setField("cat", new String[]{"aaa", "ccc"});
+    doc.setField("cat", new String[] {"aaa", "ccc"});
     doc.setField("atomic_is", 10);
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "4");
-    doc.setField("cat", new String[]{"aaa", "ccc"});
+    doc.setField("cat", new String[] {"aaa", "ccc"});
     assertU(adoc(doc));
 
     assertU(commit());
@@ -1041,60 +1128,60 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     assertQ(req("q", "cat:*", "indent", "true"), "//result[@numFound = '2']");
     assertQ(req("q", "cat:bbb", "indent", "true"), "//result[@numFound = '0']");
 
-
     doc = new SolrInputDocument();
     doc.setField("id", "3");
-    doc.setField("cat", ImmutableMap.of("add-distinct", "bbb"));
-    doc.setField("atomic_is", ImmutableMap.of("add-distinct", 10));
+    doc.setField("cat", Map.of("add-distinct", "bbb"));
+    doc.setField("atomic_is", Map.of("add-distinct", 10));
     assertU(adoc(doc));
     assertU(commit());
 
     assertQ(req("q", "cat:*", "indent", "true"), "//result[@numFound = '2']");
     assertQ(req("q", "cat:bbb", "indent", "true"), "//result[@numFound = '1']");
-    assertQ(req("q", "cat:bbb", "indent", "true"),
+    assertQ(
+        req("q", "cat:bbb", "indent", "true"),
         "//doc/arr[@name='cat'][count(str)=3]",
-        "//doc/arr[@name='atomic_is'][count(int)=1]"
-    );
+        "//doc/arr[@name='atomic_is'][count(int)=1]");
 
     doc = new SolrInputDocument();
     doc.setField("id", "3");
-    doc.setField("cat", ImmutableMap.of("add-distinct", Arrays.asList("bbb", "bbb")));
-    doc.setField("atomic_is", ImmutableMap.of("add-distinct", Arrays.asList(10, 34)));
+    doc.setField("cat", Map.of("add-distinct", Arrays.asList("bbb", "bbb")));
+    doc.setField("atomic_is", Map.of("add-distinct", Arrays.asList(10, 34)));
     assertU(adoc(doc));
     assertU(commit());
 
     assertQ(req("q", "cat:*", "indent", "true"), "//result[@numFound = '2']");
     assertQ(req("q", "cat:bbb", "indent", "true"), "//result[@numFound = '1']");
-    assertQ(req("q", "cat:bbb", "indent", "true"),
-        "//doc/arr[@name='cat'][count(str)=3]", //'bbb' already present will not be added again
-        "//doc/arr[@name='atomic_is'][count(int)=2]"
-    );
+    assertQ(
+        req("q", "cat:bbb", "indent", "true"),
+        "//doc/arr[@name='cat'][count(str)=3]", // 'bbb' already present will not be added again
+        "//doc/arr[@name='atomic_is'][count(int)=2]");
 
     doc = new SolrInputDocument();
     doc.setField("id", "5");
-    doc.setField("cat", ImmutableMap.of("add-distinct", "bbb"));
+    doc.setField("cat", Map.of("add-distinct", "bbb"));
     assertU(adoc(doc));
     assertU(commit());
 
     assertQ(req("q", "cat:*", "indent", "true"), "//result[@numFound = '3']");
-    assertQ(req("q", "cat:bbb", "indent", "true"), "//result[@numFound = '2']"); //'cat' field not present, do 'add' atomic operation
+    assertQ(
+        req("q", "cat:bbb", "indent", "true"),
+        "//result[@numFound = '2']"); // 'cat' field not present, do 'add' atomic operation
   }
 
   @Test
-  public void testAddMultiple() throws Exception {
+  public void testAddMultiple() {
     SolrInputDocument doc = new SolrInputDocument();
     doc.setField("id", "3");
-    doc.setField("cat", new String[]{"aaa", "ccc"});
+    doc.setField("cat", new String[] {"aaa", "ccc"});
     assertU(adoc(doc));
     assertU(commit());
 
     assertQ(req("q", "cat:*", "indent", "true"), "//result[@numFound = '1']");
     assertQ(req("q", "cat:bbb", "indent", "true"), "//result[@numFound = '0']");
 
-
     doc = new SolrInputDocument();
     doc.setField("id", "3");
-    doc.setField("cat", ImmutableMap.of("add", "bbb"));
+    doc.setField("cat", Map.of("add", "bbb"));
     assertU(adoc(doc));
     assertU(commit());
 
@@ -1103,44 +1190,50 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
 
     doc = new SolrInputDocument();
     doc.setField("id", "3");
-    doc.setField("cat", ImmutableMap.of("add", "bbb"));
+    doc.setField("cat", Map.of("add", "bbb"));
     assertU(adoc(doc));
     assertU(commit());
 
     assertQ(req("q", "cat:*", "indent", "true"), "//result[@numFound = '1']");
-    assertQ(req("q", "cat:bbb", "indent", "true"), "//result[@numFound = '1']"); // Should now have 2 occurrences of bbb
+    assertQ(
+        req("q", "cat:bbb", "indent", "true"),
+        "//result[@numFound = '1']"); // Should now have 2 occurrences of bbb
 
     doc = new SolrInputDocument();
     doc.setField("id", "3");
-    doc.setField("cat", ImmutableMap.of("remove", "bbb"));
+    doc.setField("cat", Map.of("remove", "bbb"));
     assertU(adoc(doc));
     assertU(commit());
 
     assertQ(req("q", "cat:*", "indent", "true"), "//result[@numFound = '1']");
-    assertQ(req("q", "cat:bbb", "indent", "true"), "//result[@numFound = '1']"); // remove only removed first occurrence
+    assertQ(
+        req("q", "cat:bbb", "indent", "true"),
+        "//result[@numFound = '1']"); // remove only removed first occurrence
 
     doc = new SolrInputDocument();
     doc.setField("id", "3");
-    doc.setField("cat", ImmutableMap.of("remove", "bbb"));
+    doc.setField("cat", Map.of("remove", "bbb"));
     assertU(adoc(doc));
     assertU(commit());
 
     assertQ(req("q", "cat:*", "indent", "true"), "//result[@numFound = '1']");
-    assertQ(req("q", "cat:bbb", "indent", "true"), "//result[@numFound = '0']"); // remove now removed last occurrence
+    assertQ(
+        req("q", "cat:bbb", "indent", "true"),
+        "//result[@numFound = '0']"); // remove now removed last occurrence
   }
 
   @Test
-  public void testSet() throws Exception {
+  public void testSet() {
     SolrInputDocument doc;
 
     doc = new SolrInputDocument();
     doc.setField("id", "5");
-    doc.setField("cat", new String[]{"aaa", "ccc"});
+    doc.setField("cat", new String[] {"aaa", "ccc"});
     assertU(adoc(doc));
 
     doc = new SolrInputDocument();
     doc.setField("id", "6");
-    doc.setField("cat", new String[]{"aaa", "ccc"});
+    doc.setField("cat", new String[] {"aaa", "ccc"});
     assertU(adoc(doc));
 
     assertU(commit());
@@ -1150,10 +1243,9 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     assertQ(req("q", "cat:bbb", "indent", "true"), "//result[@numFound = '0']");
     assertQ(req("q", "cat:ccc", "indent", "true"), "//result[@numFound = '2']");
 
-
     doc = new SolrInputDocument();
     doc.setField("id", "5");
-    doc.setField("cat", ImmutableMap.of("set", "bbb"));
+    doc.setField("cat", Map.of("set", "bbb"));
     assertU(adoc(doc));
     assertU(commit());
 
@@ -1164,11 +1256,11 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
 
     // update on id
     doc = new SolrInputDocument();
-    doc.setField("id", ImmutableMap.of("set", "1001"));
+    doc.setField("id", Map.of("set", "1001"));
     assertFailedU(adoc(doc));
   }
 
-  public void testAtomicUpdatesOnDateFields() throws Exception {
+  public void testAtomicUpdatesOnDateFields() {
     String[] dateFieldNames = {"simple_tdt1", "simple_tdts", "simple_tdtdv1", "simple_tdtdvs"};
 
     SolrInputDocument doc = new SolrInputDocument();
@@ -1185,53 +1277,51 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
 
     assertQ(req("q", "id:6"), "boolean(//result/doc/date[@name='simple_tdt1'])");
 
-
     for (String dateFieldName : dateFieldNames) {
       // none (this can fail with Invalid Date String exception)
       doc = new SolrInputDocument();
       doc.setField("id", "6");
-      doc.setField("other_i", ImmutableMap.of("set", "43")); // set the independent field to another value
+      doc.setField("other_i", Map.of("set", "43")); // set the independent field to another value
       assertU(adoc(doc));
 
-      if (dateFieldName.endsWith("s"))  {
+      if (dateFieldName.endsWith("s")) {
         // add
         doc = new SolrInputDocument();
         doc.setField("id", "6");
-        doc.setField("other_i", ImmutableMap.of("set", "43")); // set the independent field to another value
-        doc.setField(dateFieldName, ImmutableMap.of("add", "1987-01-01T00:00:00Z"));
+        doc.setField("other_i", Map.of("set", "43")); // set the independent field to another value
+        doc.setField(dateFieldName, Map.of("add", "1987-01-01T00:00:00Z"));
         assertU(adoc(doc));
 
         // remove
         doc = new SolrInputDocument();
         doc.setField("id", "6");
-        doc.setField("other_i", ImmutableMap.of("set", "43")); // set the independent field to another value
-        doc.setField(dateFieldName, ImmutableMap.of("remove", "1987-01-01T00:00:00Z"));
+        doc.setField("other_i", Map.of("set", "43")); // set the independent field to another value
+        doc.setField(dateFieldName, Map.of("remove", "1987-01-01T00:00:00Z"));
         assertU(adoc(doc));
       } else {
         // set
         doc = new SolrInputDocument();
         doc.setField("id", "6");
-        doc.setField("other_i", ImmutableMap.of("set", "43")); // set the independent field to another value
-        doc.setField(dateFieldName, ImmutableMap.of("set", "1987-01-01T00:00:00Z"));
+        doc.setField("other_i", Map.of("set", "43")); // set the independent field to another value
+        doc.setField(dateFieldName, Map.of("set", "1987-01-01T00:00:00Z"));
         assertU(adoc(doc));
 
         // unset
         doc = new SolrInputDocument();
         doc.setField("id", "6");
-        doc.setField("other_i", ImmutableMap.of("set", "43")); // set the independent field to another value
+        doc.setField("other_i", Map.of("set", "43")); // set the independent field to another value
         doc.setField(dateFieldName, map("set", null));
         assertU(adoc(doc));
       }
 
       assertU(commit());
-      if (dateFieldName.endsWith("s"))  {
+      if (dateFieldName.endsWith("s")) {
         assertQ(req("q", "id:6"), "//result/doc[count(arr[@name='" + dateFieldName + "'])=1]");
         assertQ(req("q", "id:6"), "//result/doc/arr[@name='" + dateFieldName + "'][count(date)=1]");
       } else {
         assertQ(req("q", "id:6"), "//result/doc[count(date[@name='" + dateFieldName + "'])=0]");
       }
     }
-
   }
 
   @Test
@@ -1241,34 +1331,38 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     assertU(adoc(sdoc("id", 4, "single_s_dvo", "abc", "single_i_dvo", 1)));
     assertU(commit());
 
-    assertU(adoc(sdoc("id", 2, "title", ImmutableMap.of("set", "newtitle2"),
-        "single_i_dvo", ImmutableMap.of("inc", 1))));
-    assertU(adoc(sdoc("id", 3, "title", ImmutableMap.of("set", "newtitle3"),
-        "single_d_dvo", ImmutableMap.of("inc", 1))));
-    assertU(adoc(sdoc("id", 4, "single_i_dvo", ImmutableMap.of("inc", 1))));
+    assertU(
+        adoc(sdoc("id", 2, "title", Map.of("set", "newtitle2"), "single_i_dvo", Map.of("inc", 1))));
+    assertU(
+        adoc(sdoc("id", 3, "title", Map.of("set", "newtitle3"), "single_d_dvo", Map.of("inc", 1))));
+    assertU(adoc(sdoc("id", 4, "single_i_dvo", Map.of("inc", 1))));
     assertU(commit());
 
-    assertJQ(req("q", "id:2"),
+    assertJQ(
+        req("q", "id:2"),
         "/response/docs/[0]/id=='2'",
         "/response/docs/[0]/title/[0]=='newtitle2'",
         "/response/docs/[0]/single_i_dvo==101");
 
-    assertJQ(req("q", "id:3"),
+    assertJQ(
+        req("q", "id:3"),
         1e-4,
         "/response/docs/[0]/id=='3'",
         "/response/docs/[0]/title/[0]=='newtitle3'",
         "/response/docs/[0]/single_d_dvo==4.14");
 
-    assertJQ(req("q", "id:4"),
+    assertJQ(
+        req("q", "id:4"),
         1e-4,
         "/response/docs/[0]/id=='4'",
         "/response/docs/[0]/single_s_dvo=='abc'",
         "/response/docs/[0]/single_i_dvo==2");
 
     // test that non stored docvalues was carried forward for a non-docvalue update
-    assertU(adoc(sdoc("id", 3, "title", ImmutableMap.of("set", "newertitle3"))));
+    assertU(adoc(sdoc("id", 3, "title", Map.of("set", "newertitle3"))));
     assertU(commit());
-    assertJQ(req("q", "id:3"),
+    assertJQ(
+        req("q", "id:3"),
         1e-4,
         "/response/docs/[0]/id=='3'",
         "/response/docs/[0]/title/[0]=='newertitle3'",
@@ -1277,20 +1371,31 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
 
   @Test
   public void testAtomicUpdatesOnNonStoredDocValuesMulti() throws Exception {
-    assertU(adoc(sdoc("id", 1, "title", "title1", "multi_ii_dvo", 100, "multi_ii_dvo", Integer.MAX_VALUE)));
+    assertU(
+        adoc(
+            sdoc(
+                "id",
+                1,
+                "title",
+                "title1",
+                "multi_ii_dvo",
+                100,
+                "multi_ii_dvo",
+                Integer.MAX_VALUE)));
     assertU(commit());
 
-    assertU(adoc(sdoc("id", 1, "title", ImmutableMap.of("set", "newtitle1"))));
+    assertU(adoc(sdoc("id", 1, "title", Map.of("set", "newtitle1"))));
     assertU(commit());
 
     // test that non stored multivalued docvalues was carried forward for a non docvalues update
-    assertJQ(req("q", "id:1"),
+    assertJQ(
+        req("q", "id:1"),
         "/response/docs/[0]/id=='1'",
         "/response/docs/[0]/title/[0]=='newtitle1'",
         "/response/docs/[0]/multi_ii_dvo/[0]==100",
         "/response/docs/[0]/multi_ii_dvo/[1]==" + Integer.MAX_VALUE);
   }
-  
+
   @Test
   public void testAtomicUpdatesOnNonStoredDocValuesCopyField() throws Exception {
     assertU(adoc(sdoc("id", 101, "title", "title2", "single_i_dvn", 100)));
@@ -1298,37 +1403,63 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     assertU(adoc(sdoc("id", 103, "single_s_dvn", "abc", "single_i_dvn", 1)));
     assertU(commit());
 
-    // Do each one twice... the first time it will be retrieved from the index, and the second time from the transaction log.
-    for (int i=0; i<2; i++) {
-      assertU(adoc(sdoc("id", 101, "title", ImmutableMap.of("set", "newtitle2"),
-          "single_i_dvn", ImmutableMap.of("inc", 1))));
-      assertU(adoc(sdoc("id", 102, "title", ImmutableMap.of("set", "newtitle3"),
-          "single_d_dvn", ImmutableMap.of("inc", 1))));
-      assertU(adoc(sdoc("id", 103, "single_i_dvn", ImmutableMap.of("inc", 1))));
+    // Do each one twice... the first time it will be retrieved from the index, and the second time
+    // from the transaction log.
+    for (int i = 0; i < 2; i++) {
+      assertU(
+          adoc(
+              sdoc(
+                  "id",
+                  101,
+                  "title",
+                  Map.of("set", "newtitle2"),
+                  "single_i_dvn",
+                  Map.of("inc", 1))));
+      assertU(
+          adoc(
+              sdoc(
+                  "id",
+                  102,
+                  "title",
+                  Map.of("set", "newtitle3"),
+                  "single_d_dvn",
+                  Map.of("inc", 1))));
+      assertU(adoc(sdoc("id", 103, "single_i_dvn", Map.of("inc", 1))));
     }
     assertU(commit());
 
-    assertJQ(req("q", "id:101"),
+    assertJQ(
+        req("q", "id:101"),
         "/response/docs/[0]/id=='101'",
         "/response/docs/[0]/title/[0]=='newtitle2'",
         "/response/docs/[0]/single_i_dvn==102");
 
-    assertJQ(req("q", "id:102"),
+    assertJQ(
+        req("q", "id:102"),
         1e-4,
         "/response/docs/[0]/id=='102'",
         "/response/docs/[0]/title/[0]=='newtitle3'",
         "/response/docs/[0]/single_d_dvn==5.14");
 
-    assertJQ(req("q", "id:103"),
+    assertJQ(
+        req("q", "id:103"),
         "/response/docs/[0]/id=='103'",
         "/response/docs/[0]/single_s_dvn=='abc'",
         "/response/docs/[0]/single_i_dvn==3");
 
     // test that non stored docvalues was carried forward for a non-docvalue update
-    assertU(adoc(sdoc("id", 103, "single_s_dvn", ImmutableMap.of("set", "abcupdate"),
-        "single_i_dvn", ImmutableMap.of("set", 5))));
+    assertU(
+        adoc(
+            sdoc(
+                "id",
+                103,
+                "single_s_dvn",
+                Map.of("set", "abcupdate"),
+                "single_i_dvn",
+                Map.of("set", 5))));
     assertU(commit());
-    assertJQ(req("q", "id:103"),
+    assertJQ(
+        req("q", "id:103"),
         "/response/docs/[0]/id=='103'",
         "/response/docs/[0]/single_s_dvn=='abcupdate'",
         "/response/docs/[0]/single_i_dvn==5");
@@ -1340,7 +1471,7 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
 
     doc = new SolrInputDocument();
     doc.setField("id", "7");
-    doc.setField("cat", new String[]{"aaa", "ccc"});
+    doc.setField("cat", new String[] {"aaa", "ccc"});
     assertU(adoc(doc));
 
     assertU(commit());
@@ -1349,8 +1480,8 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
 
     doc = new SolrInputDocument();
     doc.setField("id", "7");
-    doc.setField("cat", ImmutableMap.of("whatever", "bbb"));
-    assertFailedU( adoc(doc));
+    doc.setField("cat", Map.of("whatever", "bbb"));
+    assertFailedU(adoc(doc));
     assertU(commit());
 
     assertQ(req("q", "cat:*", "indent", "true"), "//result[@numFound = '1']");
@@ -1361,7 +1492,7 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     // add a nested document;
     doc = new SolrInputDocument();
     doc.setField("id", "123");
-    doc.setField("cat", ImmutableMap.of("whatever", "ddd"));
+    doc.setField("cat", Map.of("whatever", "ddd"));
 
     SolrInputDocument childDoc = new SolrInputDocument();
     childDoc.setField("id", "1231");
@@ -1401,58 +1532,58 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
     // inc op on non-numeric field
     SolrInputDocument invalidDoc = new SolrInputDocument();
     invalidDoc.setField("id", "7");
-    invalidDoc.setField("cat", ImmutableMap.of("inc", "bbb"));
+    invalidDoc.setField("cat", Map.of("inc", "bbb"));
 
     SolrException e = expectThrows(SolrException.class, () -> assertU(adoc(invalidDoc)));
     assertEquals(SolrException.ErrorCode.BAD_REQUEST.code, e.code());
-    MatcherAssert.assertThat(e.getMessage(), containsString("'inc' is not supported on non-numeric field cat"));
+    MatcherAssert.assertThat(
+        e.getMessage(), containsString("'inc' is not supported on non-numeric field cat"));
   }
 
   public void testFieldsWithDefaultValuesWhenAtomicUpdatesAgainstTlog() {
     for (String fieldToUpdate : Arrays.asList("field_to_update_i1", "field_to_update_i_dvo")) {
       clearIndex();
-      
+
       assertU(adoc(sdoc("id", "7", fieldToUpdate, "666")));
-      assertQ(fieldToUpdate + ": initial RTG"
-              , req("qt", "/get", "id", "7")
-              , "count(//doc)=1"
-              , "//doc/str[@name='id'][.='7']"
-              , "//doc/int[@name='"+fieldToUpdate+"'][.='666']"
-              , "//doc/int[@name='intDefault'][.='42']"
-              , "//doc/int[@name='intDvoDefault'][.='42']"
-              , "//doc/long[@name='_version_']"
-              , "//doc/date[@name='timestamp']"
-              , "//doc/arr[@name='multiDefault']/str[.='muLti-Default']"
-              );
+      assertQ(
+          fieldToUpdate + ": initial RTG",
+          req("qt", "/get", "id", "7"),
+          "count(//doc)=1",
+          "//doc/str[@name='id'][.='7']",
+          "//doc/int[@name='" + fieldToUpdate + "'][.='666']",
+          "//doc/int[@name='intDefault'][.='42']",
+          "//doc/int[@name='intDvoDefault'][.='42']",
+          "//doc/long[@name='_version_']",
+          "//doc/date[@name='timestamp']",
+          "//doc/arr[@name='multiDefault']/str[.='muLti-Default']");
 
       // do atomic update
-      assertU(adoc(sdoc("id", "7", fieldToUpdate, ImmutableMap.of("inc", -555))));
-      assertQ(fieldToUpdate + ": RTG after atomic update"
-              , req("qt", "/get", "id", "7")
-              , "count(//doc)=1"
-              , "//doc/str[@name='id'][.='7']"
-              , "//doc/int[@name='"+fieldToUpdate+"'][.='111']"
-              , "//doc/int[@name='intDefault'][.='42']"
-              , "//doc/int[@name='intDvoDefault'][.='42']"
-              , "//doc/long[@name='_version_']"
-              , "//doc/date[@name='timestamp']"
-              , "//doc/arr[@name='multiDefault']/str[.='muLti-Default']"
-              );
+      assertU(adoc(sdoc("id", "7", fieldToUpdate, Map.of("inc", -555))));
+      assertQ(
+          fieldToUpdate + ": RTG after atomic update",
+          req("qt", "/get", "id", "7"),
+          "count(//doc)=1",
+          "//doc/str[@name='id'][.='7']",
+          "//doc/int[@name='" + fieldToUpdate + "'][.='111']",
+          "//doc/int[@name='intDefault'][.='42']",
+          "//doc/int[@name='intDvoDefault'][.='42']",
+          "//doc/long[@name='_version_']",
+          "//doc/date[@name='timestamp']",
+          "//doc/arr[@name='multiDefault']/str[.='muLti-Default']");
 
       assertU(commit());
-      assertQ(fieldToUpdate + ": post commit RTG"
-              , req("qt", "/get", "id", "7")
-              , "count(//doc)=1"
-              , "//doc/str[@name='id'][.='7']"
-              , "//doc/int[@name='"+fieldToUpdate+"'][.='111']"
-              , "//doc/int[@name='intDefault'][.='42']"
-              , "//doc/int[@name='intDvoDefault'][.='42']"
-              , "//doc/long[@name='_version_']"
-              , "//doc/date[@name='timestamp']"
-              , "//doc/arr[@name='multiDefault']/str[.='muLti-Default']"
-              );
+      assertQ(
+          fieldToUpdate + ": post commit RTG",
+          req("qt", "/get", "id", "7"),
+          "count(//doc)=1",
+          "//doc/str[@name='id'][.='7']",
+          "//doc/int[@name='" + fieldToUpdate + "'][.='111']",
+          "//doc/int[@name='intDefault'][.='42']",
+          "//doc/int[@name='intDvoDefault'][.='42']",
+          "//doc/long[@name='_version_']",
+          "//doc/date[@name='timestamp']",
+          "//doc/arr[@name='multiDefault']/str[.='muLti-Default']");
     }
-    
   }
 
   public void testAtomicUpdateOfFieldsWithDefaultValue() {
@@ -1461,86 +1592,112 @@ public class AtomicUpdatesTest extends SolrTestCaseJ4 {
       clearIndex();
 
       // doc where we immediately attempt to inc the default value
-      assertU(adoc(sdoc("id", "7", fieldToUpdate, ImmutableMap.of("inc", "666"))));
-      assertQ(fieldToUpdate + ": initial RTG#7"
-              , req("qt", "/get", "id", "7")
-              , "count(//doc)=1"
-              , "//doc/str[@name='id'][.='7']"
-              , "//doc/int[@name='"+fieldToUpdate+"'][.='708']"
-              // whichever field we did *NOT* update
-              , "//doc/int[@name!='"+fieldToUpdate+"'][.='42']"
-              , "//doc/long[@name='_version_']"
-              , "//doc/date[@name='timestamp']"
-              , "//doc/arr[@name='multiDefault']/str[.='muLti-Default']"
-              );
+      assertU(adoc(sdoc("id", "7", fieldToUpdate, Map.of("inc", "666"))));
+      assertQ(
+          fieldToUpdate + ": initial RTG#7",
+          req("qt", "/get", "id", "7"),
+          "count(//doc)=1",
+          "//doc/str[@name='id'][.='7']",
+          "//doc/int[@name='" + fieldToUpdate + "'][.='708']",
+          // whichever field we did *NOT* update
+          "//doc/int[@name!='" + fieldToUpdate + "'][.='42']",
+          "//doc/long[@name='_version_']",
+          "//doc/date[@name='timestamp']",
+          "//doc/arr[@name='multiDefault']/str[.='muLti-Default']");
       // do atomic update
-      assertU(adoc(sdoc("id", "7", fieldToUpdate, ImmutableMap.of("inc", -555))));
-      assertQ(fieldToUpdate + ": RTG#7 after atomic update"
-              , req("qt", "/get", "id", "7")
-              , "count(//doc)=1"
-              , "//doc/str[@name='id'][.='7']"
-              , "//doc/int[@name='"+fieldToUpdate+"'][.='153']"
-              // whichever field we did *NOT* update
-              , "//doc/int[@name!='"+fieldToUpdate+"'][.='42']"
-              , "//doc/long[@name='_version_']"
-              , "//doc/date[@name='timestamp']"
-              , "//doc/arr[@name='multiDefault']/str[.='muLti-Default']"
-              );
+      assertU(adoc(sdoc("id", "7", fieldToUpdate, Map.of("inc", -555))));
+      assertQ(
+          fieldToUpdate + ": RTG#7 after atomic update",
+          req("qt", "/get", "id", "7"),
+          "count(//doc)=1",
+          "//doc/str[@name='id'][.='7']",
+          "//doc/int[@name='" + fieldToUpdate + "'][.='153']",
+          // whichever field we did *NOT* update
+          "//doc/int[@name!='" + fieldToUpdate + "'][.='42']",
+          "//doc/long[@name='_version_']",
+          "//doc/date[@name='timestamp']",
+          "//doc/arr[@name='multiDefault']/str[.='muLti-Default']");
 
       // diff doc where we check that we can overwrite the default value
-      assertU(adoc(sdoc("id", "8", fieldToUpdate, ImmutableMap.of("set", "666"))));
-      assertQ(fieldToUpdate + ": initial RTG#8"
-              , req("qt", "/get", "id", "8")
-              , "count(//doc)=1"
-              , "//doc/str[@name='id'][.='8']"
-              , "//doc/int[@name='"+fieldToUpdate+"'][.='666']"
-              // whichever field we did *NOT* update
-              , "//doc/int[@name!='"+fieldToUpdate+"'][.='42']"
-              , "//doc/long[@name='_version_']"
-              , "//doc/date[@name='timestamp']"
-              , "//doc/arr[@name='multiDefault']/str[.='muLti-Default']"
-              );
+      assertU(adoc(sdoc("id", "8", fieldToUpdate, Map.of("set", "666"))));
+      assertQ(
+          fieldToUpdate + ": initial RTG#8",
+          req("qt", "/get", "id", "8"),
+          "count(//doc)=1",
+          "//doc/str[@name='id'][.='8']",
+          "//doc/int[@name='" + fieldToUpdate + "'][.='666']",
+          // whichever field we did *NOT* update
+          "//doc/int[@name!='" + fieldToUpdate + "'][.='42']",
+          "//doc/long[@name='_version_']",
+          "//doc/date[@name='timestamp']",
+          "//doc/arr[@name='multiDefault']/str[.='muLti-Default']");
       // do atomic update
-      assertU(adoc(sdoc("id", "8", fieldToUpdate, ImmutableMap.of("inc", -555))));
-      assertQ(fieldToUpdate + ": RTG after atomic update"
-              , req("qt", "/get", "id", "8")
-              , "count(//doc)=1"
-              , "//doc/str[@name='id'][.='8']"
-              , "//doc/int[@name='"+fieldToUpdate+"'][.='111']"
-              // whichever field we did *NOT* update
-              , "//doc/int[@name!='"+fieldToUpdate+"'][.='42']"
-              , "//doc/long[@name='_version_']"
-              , "//doc/date[@name='timestamp']"
-              , "//doc/arr[@name='multiDefault']/str[.='muLti-Default']"
-              );
-      
+      assertU(adoc(sdoc("id", "8", fieldToUpdate, Map.of("inc", -555))));
+      assertQ(
+          fieldToUpdate + ": RTG after atomic update",
+          req("qt", "/get", "id", "8"),
+          "count(//doc)=1",
+          "//doc/str[@name='id'][.='8']",
+          "//doc/int[@name='" + fieldToUpdate + "'][.='111']",
+          // whichever field we did *NOT* update
+          "//doc/int[@name!='" + fieldToUpdate + "'][.='42']",
+          "//doc/long[@name='_version_']",
+          "//doc/date[@name='timestamp']",
+          "//doc/arr[@name='multiDefault']/str[.='muLti-Default']");
+
       assertU(commit());
-      
-      assertQ(fieldToUpdate + ": doc7 post commit RTG"
-              , req("qt", "/get", "id", "7")
-              , "count(//doc)=1"
-              , "//doc/str[@name='id'][.='7']"
-              , "//doc/int[@name='"+fieldToUpdate+"'][.='153']"
-              // whichever field we did *NOT* update
-              , "//doc/int[@name!='"+fieldToUpdate+"'][.='42']"
-              , "//doc/long[@name='_version_']"
-              , "//doc/date[@name='timestamp']"
-              , "//doc/arr[@name='multiDefault']/str[.='muLti-Default']"
-              );
-      assertQ(fieldToUpdate + ": doc8 post commit RTG"
-              , req("qt", "/get", "id", "8")
-              , "count(//doc)=1"
-              , "//doc/str[@name='id'][.='8']"
-              , "//doc/int[@name='"+fieldToUpdate+"'][.='111']"
-              // whichever field we did *NOT* update
-              , "//doc/int[@name!='"+fieldToUpdate+"'][.='42']"
-              , "//doc/long[@name='_version_']"
-              , "//doc/date[@name='timestamp']"
-              , "//doc/arr[@name='multiDefault']/str[.='muLti-Default']"
-              );
+
+      assertQ(
+          fieldToUpdate + ": doc7 post commit RTG",
+          req("qt", "/get", "id", "7"),
+          "count(//doc)=1",
+          "//doc/str[@name='id'][.='7']",
+          "//doc/int[@name='" + fieldToUpdate + "'][.='153']",
+          // whichever field we did *NOT* update
+          "//doc/int[@name!='" + fieldToUpdate + "'][.='42']",
+          "//doc/long[@name='_version_']",
+          "//doc/date[@name='timestamp']",
+          "//doc/arr[@name='multiDefault']/str[.='muLti-Default']");
+      assertQ(
+          fieldToUpdate + ": doc8 post commit RTG",
+          req("qt", "/get", "id", "8"),
+          "count(//doc)=1",
+          "//doc/str[@name='id'][.='8']",
+          "//doc/int[@name='" + fieldToUpdate + "'][.='111']",
+          // whichever field we did *NOT* update
+          "//doc/int[@name!='" + fieldToUpdate + "'][.='42']",
+          "//doc/long[@name='_version_']",
+          "//doc/date[@name='timestamp']",
+          "//doc/arr[@name='multiDefault']/str[.='muLti-Default']");
     }
-    
   }
-  
-  
+
+  @Test
+  public void testAddDistinctToEmptyCollection() {
+    SolrInputDocument doc;
+
+    doc = new SolrInputDocument();
+    doc.setField("id", "5005");
+    doc.setField("intRemove", new Long[] {111L, 222L});
+    assertU(adoc(doc));
+
+    assertU(commit());
+    assertQ(
+        req("q", "intRemove:*", "indent", "true"),
+        "//result[@numFound = '1']",
+        "//result/doc[1]/arr[@name='intRemove']/int[1][.=111]",
+        "//result/doc[1]/arr[@name='intRemove']/int[2][.=222]");
+
+    doc = new SolrInputDocument();
+    doc.setField("id", "5005");
+    doc.setField("intRemove", Map.of("remove", List.of(111L, 222L), "add-distinct", 333L));
+    assertU(adoc(doc));
+    assertU(commit());
+
+    assertQ(
+        req("q", "intRemove:*", "indent", "true"),
+        "//result[@numFound = '1']",
+        "*[count(//result/doc[1]/arr[@name='intRemove']/int)=1]",
+        "//result/doc[1]/arr[@name='intRemove']/int[1][.=333]");
+  }
 }
