@@ -17,8 +17,14 @@
 
 package org.apache.solr.client.solrj.impl;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
+import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
+
 import java.net.ConnectException;
 import java.net.SocketException;
+import java.time.Instant;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -27,8 +33,6 @@ import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Function;
-
-import com.google.common.collect.ImmutableSet;
 import org.apache.http.NoHttpResponseException;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.client.solrj.cloud.DelegatingClusterStateProvider;
@@ -38,12 +42,8 @@ import org.apache.solr.common.cloud.DocCollection;
 import org.apache.solr.common.util.NamedList;
 import org.junit.BeforeClass;
 
-import static org.mockito.Mockito.*;
-
-import static java.nio.charset.StandardCharsets.UTF_8;
-
 public class CloudSolrClientCacheTest extends SolrTestCaseJ4 {
-  
+
   @BeforeClass
   public static void beforeClass() {
     assumeWorkingMockito();
@@ -80,51 +80,62 @@ public class CloudSolrClientCacheTest extends SolrTestCaseJ4 {
 
     LBHttpSolrClient mockLbclient = getMockLbHttpSolrClient(responses);
     AtomicInteger lbhttpRequestCount = new AtomicInteger();
-    try (CloudSolrClient cloudClient = new CloudSolrClientBuilder(getStateProvider(livenodes, refs))
-        .withLBHttpSolrClient(mockLbclient)
-        .build()) {
-      livenodes.addAll(ImmutableSet.of("192.168.1.108:7574_solr", "192.168.1.108:8983_solr"));
-      ClusterState cs = ClusterState.createFromJson(1, coll1State.getBytes(UTF_8), Collections.emptySet());
+    try (ClusterStateProvider clusterStateProvider = getStateProvider(livenodes, refs);
+        CloudSolrClient cloudClient =
+            new RandomizingCloudSolrClientBuilder(clusterStateProvider)
+                .withLBHttpSolrClient(mockLbclient)
+                .build()) {
+      livenodes.addAll(Set.of("192.168.1.108:7574_solr", "192.168.1.108:8983_solr"));
+      ClusterState cs =
+          ClusterState.createFromJson(
+              1, coll1State.getBytes(UTF_8), Collections.emptySet(), Instant.now(), null);
       refs.put(collName, new Ref(collName));
       colls.put(collName, cs.getCollectionOrNull(collName));
-      responses.put("request", o -> {
-        int i = lbhttpRequestCount.incrementAndGet();
-        if (i == 1) return new ConnectException("TEST");
-        if (i == 2) return new SocketException("TEST");
-        if (i == 3) return new NoHttpResponseException("TEST");
-        return okResponse;
-      });
-      UpdateRequest update = new UpdateRequest()
-          .add("id", "123", "desc", "Something 0");
+      responses.put(
+          "request",
+          o -> {
+            int i = lbhttpRequestCount.incrementAndGet();
+            if (i == 1) {
+              return new ConnectException("TEST");
+            }
+            if (i == 2) {
+              return new SocketException("TEST");
+            }
+            if (i == 3) {
+              return new NoHttpResponseException("TEST");
+            }
+            return okResponse;
+          });
+      UpdateRequest update = new UpdateRequest().add("id", "123", "desc", "Something 0");
 
       cloudClient.request(update, collName);
       assertEquals(2, refs.get(collName).getCount());
     }
-
   }
 
-
   @SuppressWarnings({"unchecked"})
-  private LBHttpSolrClient getMockLbHttpSolrClient(
-          Map<String, Function<?,?>> responses) throws Exception {
+  private LBHttpSolrClient getMockLbHttpSolrClient(Map<String, Function<?, ?>> responses)
+      throws Exception {
     LBHttpSolrClient mockLbclient = mock(LBHttpSolrClient.class);
 
-    when(mockLbclient.request(any(LBSolrClient.Req.class))).then(invocationOnMock -> {
-      LBHttpSolrClient.Req req = invocationOnMock.getArgument(0);
-      Function<?,?> f = responses.get("request");
-      if (f == null) return null;
-      Object res = f.apply(null);
-      if (res instanceof Exception) throw (Throwable) res;
-      LBHttpSolrClient.Rsp rsp = new LBHttpSolrClient.Rsp();
-      rsp.rsp = (NamedList<Object>) res;
-      rsp.server = req.servers.get(0);
-      return rsp;
-    });
+    when(mockLbclient.request(any(LBSolrClient.Req.class)))
+        .then(
+            invocationOnMock -> {
+              LBSolrClient.Req req = invocationOnMock.getArgument(0);
+              Function<?, ?> f = responses.get("request");
+              if (f == null) return null;
+              Object res = f.apply(null);
+              if (res instanceof Exception) throw (Throwable) res;
+              LBSolrClient.Rsp rsp = new LBSolrClient.Rsp();
+              rsp.rsp = (NamedList<Object>) res;
+              rsp.server = req.servers.get(0);
+              return rsp;
+            });
     return mockLbclient;
   }
 
-  private ClusterStateProvider getStateProvider(Set<String> livenodes,
-                                                                Map<String, ClusterState.CollectionRef> colls) {
+  private ClusterStateProvider getStateProvider(
+      Set<String> livenodes, Map<String, ClusterState.CollectionRef> colls) {
     return new DelegatingClusterStateProvider(null) {
       @Override
       public ClusterState.CollectionRef getState(String collection) {
@@ -146,44 +157,41 @@ public class CloudSolrClientCacheTest extends SolrTestCaseJ4 {
         return def;
       }
     };
-
   }
 
-
-  private String coll1State = "{'gettingstarted':{\n" +
-      "    'replicationFactor':'2',\n" +
-      "    'router':{'name':'compositeId'},\n" +
-      "    'shards':{\n" +
-      "      'shard1':{\n" +
-      "        'range':'80000000-ffffffff',\n" +
-      "        'state':'active',\n" +
-      "        'replicas':{\n" +
-      "          'core_node2':{\n" +
-      "            'core':'gettingstarted_shard1_replica1',\n" +
-      "            'base_url':'http://192.168.1.108:8983/solr',\n" +
-      "            'node_name':'192.168.1.108:8983_solr',\n" +
-      "            'state':'active',\n" +
-      "            'leader':'true'},\n" +
-      "          'core_node4':{\n" +
-      "            'core':'gettingstarted_shard1_replica2',\n" +
-      "            'base_url':'http://192.168.1.108:7574/solr',\n" +
-      "            'node_name':'192.168.1.108:7574_solr',\n" +
-      "            'state':'active'}}},\n" +
-      "      'shard2':{\n" +
-      "        'range':'0-7fffffff',\n" +
-      "        'state':'active',\n" +
-      "        'replicas':{\n" +
-      "          'core_node1':{\n" +
-      "            'core':'gettingstarted_shard2_replica1',\n" +
-      "            'base_url':'http://192.168.1.108:8983/solr',\n" +
-      "            'node_name':'192.168.1.108:8983_solr',\n" +
-      "            'state':'active',\n" +
-      "            'leader':'true'},\n" +
-      "          'core_node3':{\n" +
-      "            'core':'gettingstarted_shard2_replica2',\n" +
-      "            'base_url':'http://192.168.1.108:7574/solr',\n" +
-      "            'node_name':'192.168.1.108:7574_solr',\n" +
-      "            'state':'active'}}}}}}";
-
-
+  private String coll1State =
+      "{'gettingstarted':{\n"
+          + "    'replicationFactor':'2',\n"
+          + "    'router':{'name':'compositeId'},\n"
+          + "    'shards':{\n"
+          + "      'shard1':{\n"
+          + "        'range':'80000000-ffffffff',\n"
+          + "        'state':'active',\n"
+          + "        'replicas':{\n"
+          + "          'core_node2':{\n"
+          + "            'core':'gettingstarted_shard1_replica1',\n"
+          + "            'base_url':'http://192.168.1.108:8983/solr',\n"
+          + "            'node_name':'192.168.1.108:8983_solr',\n"
+          + "            'state':'active',\n"
+          + "            'leader':'true'},\n"
+          + "          'core_node4':{\n"
+          + "            'core':'gettingstarted_shard1_replica2',\n"
+          + "            'base_url':'http://192.168.1.108:7574/solr',\n"
+          + "            'node_name':'192.168.1.108:7574_solr',\n"
+          + "            'state':'active'}}},\n"
+          + "      'shard2':{\n"
+          + "        'range':'0-7fffffff',\n"
+          + "        'state':'active',\n"
+          + "        'replicas':{\n"
+          + "          'core_node1':{\n"
+          + "            'core':'gettingstarted_shard2_replica1',\n"
+          + "            'base_url':'http://192.168.1.108:8983/solr',\n"
+          + "            'node_name':'192.168.1.108:8983_solr',\n"
+          + "            'state':'active',\n"
+          + "            'leader':'true'},\n"
+          + "          'core_node3':{\n"
+          + "            'core':'gettingstarted_shard2_replica2',\n"
+          + "            'base_url':'http://192.168.1.108:7574/solr',\n"
+          + "            'node_name':'192.168.1.108:7574_solr',\n"
+          + "            'state':'active'}}}}}}";
 }
